--- a/chants/anumodana.html
+++ b/chants/anumodana.html
@@ -91,7 +91,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="chapter-item expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="../chants/anumodana.html" class="active"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="../vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="../vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="../quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="../namo-tassa.html"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -195,20 +197,20 @@
 </ul>
 <h2 id="yathā-vāri-vahā-pūrā"><a class="header" href="#yathā-vāri-vahā-pūrā">Yathā vāri-vahā pūrā<a id="yatha"></a></a></h2>
 <p><em>Just as Rivers</em></p>
-<p>Yathā vāri-vahā pūrā paripūrenti sāgaraṃ</p>
+<p>Yathā vāri-vahā pūrā paripūrenti sāgaraṁ</p>
 <div class="english">
 <blockquote>
 <p>Just as rivers full of water entirely fill up the sea,</p>
 </blockquote>
 </div>
-<p>Evam-eva ito dinnaṃ petānaṃ upakappati</p>
+<p>Evam-eva ito dinnaṁ petānaṁ upakappati</p>
 <div class="english">
 <blockquote>
 <p>So will what’s here been given bring blessings to departed spirits.</p>
 </blockquote>
 </div>
 <p><em>Khp.VII.v8</em></p>
-<p>Icchitaṃ patthitaṃ tumhaṃ</p>
+<p>Icchitaṁ patthitaṁ tumhaṁ</p>
 <div class="english">
 <blockquote>
 <p>May all your hopes and all your longings</p>
@@ -264,9 +266,9 @@
 </blockquote>
 </div>
 <p>Abhivādana-sīlissa<br />
-Niccaṃ vuḍḍhāpacāyino<br />
+Niccaṁ vuḍḍhāpacāyino<br />
 Cattāro dhammā vaḍḍhanti<br />
-Āyu vaṇṇo sukhaṃ balaṃ</p>
+Āyu vaṇṇo sukhaṁ balaṁ</p>
 <div class="english">
 <blockquote>
 <p>For those who are respectful,<br />
@@ -276,7 +278,7 @@ Life, beauty, happiness and strength.</p>
 </blockquote>
 </div>
 <p><em>Dhp 109</em></p>
-<p>Bhavatu sabba-maṅgalaṃ</p>
+<p>Bhavatu sabba-maṅgalaṁ</p>
 <div class="english">
 <blockquote>
 <p>May every blessing come to be</p>
@@ -300,7 +302,7 @@ Life, beauty, happiness and strength.</p>
 <p>May you always be at ease.</p>
 </blockquote>
 </div>
-<p>Bhavatu sabba-maṅgalaṃ</p>
+<p>Bhavatu sabba-maṅgalaṁ</p>
 <div class="english">
 <blockquote>
 <p>May every blessing come to be</p>
@@ -324,7 +326,7 @@ Life, beauty, happiness and strength.</p>
 <p>May you always be at ease.</p>
 </blockquote>
 </div>
-<p>Bhavatu sabba-maṅgalaṃ</p>
+<p>Bhavatu sabba-maṅgalaṁ</p>
 <div class="english">
 <blockquote>
 <p>May every blessing come to be</p>
@@ -363,9 +365,9 @@ Sabb’ītiyo vivajjantu<br />
 Mā te bhavatv-antarāyo<br />
 <span class="vin"></span>sukhī dīgh’āyuko bhava<br />
 Abhivādana-sīlissa<br />
-<span class="vin"></span>niccaṃ vuḍḍhāpacāyino<br />
+<span class="vin"></span>niccaṁ vuḍḍhāpacāyino<br />
 Cattāro dhammā vaḍḍhanti<br />
-<span class="vin"></span>āyu vaṇṇo sukhaṃ balaṃ</p>
+<span class="vin"></span>āyu vaṇṇo sukhaṁ balaṁ</p>
 <p><em>Dhp 109</em></p>
 <div class="english">
 <blockquote>
@@ -378,8 +380,8 @@ and at peace.</p>
 <p>Āyu-do bala-do dhīro<br />
 <span class="vin"></span>vaṇṇa-do paṭibhāṇa-do<br />
 Sukhassa dātā medhāvī<br />
-<span class="vin"></span>sukhaṃ so adhigacchati<br />
-Āyuṃ datvā balaṃ vaṇṇaṃ<br />
+<span class="vin"></span>sukhaṁ so adhigacchati<br />
+Āyuṁ datvā balaṁ vaṇṇaṁ<br />
 <span class="vin"></span>sukhañ-ca paṭibhāna-do<br />
 Dīgh’āyu yasavā hoti<br />
 <span class="vin"></span>yattha yatthūpapajjatī’ti</p>
@@ -393,18 +395,18 @@ They have a long life and status wherever they arise.</p>
 </div>
 <p><em>A.III.42</em></p>
 <h2 id="aggappasāda-sutta-gāthā"><a class="header" href="#aggappasāda-sutta-gāthā">Aggappasāda-sutta-gāthā<a id="aggappasada"></a></a></h2>
-<p>Aggato ve pasannānaṃ<br />
-<span class="vin"></span>aggaṃ dhammaṃ vijānataṃ<br />
-Agge Buddhe pasannānaṃ<br />
+<p>Aggato ve pasannānaṁ<br />
+<span class="vin"></span>aggaṁ dhammaṁ vijānataṁ<br />
+Agge Buddhe pasannānaṁ<br />
 <span class="vin"></span>dakkhiṇeyye anuttare<br />
-Agge dhamme pasannānaṃ<br />
+Agge dhamme pasannānaṁ<br />
 <span class="vin"></span>virāgūpasame sukhe<br />
-Agge saṅghe pasannānaṃ<br />
+Agge saṅghe pasannānaṁ<br />
 <span class="vin"></span>puññakkhette anuttare<br />
-Aggasmiṃ dānaṃ dadataṃ<br />
-<span class="vin"></span>aggaṃ puññaṃ pavaḍḍhati<br />
-Aggaṃ āyu ca vaṇṇo ca<br />
-<span class="vin"></span>yaso kitti sukhaṃ balaṃ<br />
+Aggasmiṁ dānaṁ dadataṁ<br />
+<span class="vin"></span>aggaṁ puññaṁ pavaḍḍhati<br />
+Aggaṁ āyu ca vaṇṇo ca<br />
+<span class="vin"></span>yaso kitti sukhaṁ balaṁ<br />
 Aggassa dātā medhāvī<br />
 <span class="vin"></span>agga-dhamma-samāhito<br />
 Deva-bhūto manusso vā<br />
@@ -425,20 +427,20 @@ Whether becoming a deva or a human being, rejoices, having attained the supreme.
 <h2 id="adāsi-me-ādi-gāthā"><a class="header" href="#adāsi-me-ādi-gāthā">Adāsi-me ādi-gāthā<a id="adasi-me"></a></a></h2>
 <p>Adāsi me akāsi me<br />
 <span class="vin"></span>ñāti-mittā sakhā ca me<br />
-Petānaṃ dakkhiṇaṃ dajjā<br />
-<span class="vin"></span>pubbe katam-anussaraṃ<br />
-Na hi ruṇṇaṃ vā soko vā<br />
+Petānaṁ dakkhiṇaṁ dajjā<br />
+<span class="vin"></span>pubbe katam-anussaraṁ<br />
+Na hi ruṇṇaṁ vā soko vā<br />
 <span class="vin"></span>yā v’aññā paridevanā<br />
-Na taṃ petānam-atthāya<br />
-<span class="vin"></span>evaṃ tiṭṭhanti ñātayo</p>
+Na taṁ petānam-atthāya<br />
+<span class="vin"></span>evaṁ tiṭṭhanti ñātayo</p>
 <p>Ayañ-ca kho dakkhiṇā dinnā<br />
 Saṅghamhi supatiṭṭhitā<br />
-Dīgha-rattaṃ hitāy’assa<br />
+Dīgha-rattaṁ hitāy’assa<br />
 Ṭhānaso upakappati<br />
-So ñāti-dhammo ca ayaṃ nidassito<br />
+So ñāti-dhammo ca ayaṁ nidassito<br />
 Petāna’pūjā ca katā uḷārā<br />
-Balañ-ca bhikkhūnam-anuppadinnaṃ<br />
-Tumhehi puññaṃ pasutaṃ anappakan’ti.</p>
+Balañ-ca bhikkhūnam-anuppadinnaṁ<br />
+Tumhehi puññaṁ pasutaṁ anappakan’ti.</p>
 <div class="english">
 <blockquote>
 <p>“He gave to me, he acted on my behalf, and he was my relative, companion,
@@ -457,17 +459,17 @@ monks have been given strength: You have acquried merit that is not small.</p>
 <h2 id="kāla-dāna-sutta-gāthā"><a class="header" href="#kāla-dāna-sutta-gāthā">Kāla-dāna-sutta-gāthā<a id="kala-dana"></a></a></h2>
 <p>Kāle dadanti sapaññā<br />
 <span class="vin"></span>vadaññū vīta-maccharā<br />
-Kālena dinnaṃ ariyesu<br />
+Kālena dinnaṁ ariyesu<br />
 <span class="vin"></span>uju-bhūtesu tādisu<br />
 Vippasanna-manā tassa<br />
 <span class="vin"></span>vipulā hoti dakkhiṇā<br />
 Ye tattha anumodanti<br />
-<span class="vin"></span>veyyāvaccaṃ karonti vā<br />
+<span class="vin"></span>veyyāvaccaṁ karonti vā<br />
 Na tena dakkhiṇā onā<br />
 <span class="vin"></span>te pi puññassa bhāgino<br />
 Tasmā dade appaṭivāna-citto<br />
-<span class="vin"></span>yattha dinnaṃ mahapphalaṃ<br />
-Puññāni para-lokasmiṃ<br />
+<span class="vin"></span>yattha dinnaṁ mahapphalaṁ<br />
+Puññāni para-lokasmiṁ<br />
 <span class="vin"></span>patiṭṭhā honti pāṇinan’ti</p>
 <div class="english">
 <blockquote>
@@ -489,10 +491,10 @@ Dukkha-roga-bhayā verā<br />
 <span class="vin"></span>sokā sattu c’upaddavā<br />
 Anekā antarāyā pi<br />
 <span class="vin"></span>vinassantu asesato<br />
-Jaya-siddhi dhanaṃ lābhaṃ<br />
-<span class="vin"></span>sotthi bhāgyaṃ sukhaṃ balaṃ<br />
+Jaya-siddhi dhanaṁ lābhaṁ<br />
+<span class="vin"></span>sotthi bhāgyaṁ sukhaṁ balaṁ<br />
 Siri āyu ca vaṇṇo ca<br />
-<span class="vin"></span>bhogaṃ vuḍḍhī ca yasavā<br />
+<span class="vin"></span>bhogaṁ vuḍḍhī ca yasavā<br />
 Sata-vassā ca āyu ca<br />
 <span class="vin"></span>jīva-siddhī bhavantu te</p>
 <div class="english">
@@ -509,8 +511,8 @@ A lifespan of a hundred years, and success in your livelihood: may they be yours
 <p>Sabba-buddh’ānubhāvena<br />
 sabba-dhamm’ānubhāvena<br />
 sabba-saṅgh’ānubhāvena</p>
-<p>Buddha-ratanaṃ dhamma-ratanaṃ saṅgha-ratanaṃ</p>
-<p>Tiṇṇaṃ ratanānaṃ ānubhāvena<br />
+<p>Buddha-ratanaṁ dhamma-ratanaṁ saṅgha-ratanaṁ</p>
+<p>Tiṇṇaṁ ratanānaṁ ānubhāvena<br />
 Catur-āsīti-sahassa-dhammakkhandh’ānubhāvena<br />
 Piṭakattay’ānubhāvena<br />
 Jina-sāvak’ānubhāvena</p>
@@ -520,11 +522,11 @@ dunnimittā sabbe te avamaṅgalā vinassantu</p>
 vaṇṇa-vaḍḍhako sukha-vaḍḍhako hotu sabbadā</p>
 <p>Dukkha-roga-bhayā verā sokā sattu c’upaddavā<br />
 Anekā antarāyā pi vinassantu ca tejasā<br />
-Jaya-siddhi dhanaṃ lābhaṃ<br />
-Sotthi bhāgyaṃ sukhaṃ balaṃ<br />
-Siri āyu ca vaṇṇo ca bhogaṃ vuḍḍhī ca yasavā<br />
+Jaya-siddhi dhanaṁ lābhaṁ<br />
+Sotthi bhāgyaṁ sukhaṁ balaṁ<br />
+Siri āyu ca vaṇṇo ca bhogaṁ vuḍḍhī ca yasavā<br />
 Sata-vassā ca āyū ca jīva-siddhī bhavantu te</p>
-<p>Bhavatu sabba-maṅgalaṃ…</p>
+<p>Bhavatu sabba-maṅgalaṁ…</p>
 <div class="english">
 <blockquote>
 <p>Through the power of all the Buddhas, the power of all the Dhamma, the power of all the Saṅgha,
@@ -557,10 +559,10 @@ power of all the Buddhas, Dhamma and Saṅgha, may you always be well.</p>
 <h2 id="mahā-maṅgala-cakka-vāḷa"><a class="header" href="#mahā-maṅgala-cakka-vāḷa">Mahā-maṅgala-cakka-vāḷa<a id="maha-mangala"></a></a></h2>
 <p>Siri-dhiti-mati-tejo-jayasiddhi-mahiddhi-mahāguṇā-parimita-puññādhikarassa
 sabbantarāya-nivāraṇa-samatthassa bhagavato arahato sammā-sambuddhassa</p>
-<p>Dvattiṃsa-mahā-purisa-lakkhaṇānubhāvena<br />
+<p>Dvattiṁsa-mahā-purisa-lakkhaṇānubhāvena<br />
 asītyānubyañjanānubhāvena<br />
 aṭṭhuttara-sata-maṅgalānubhāvena<br />
-chabbaṇṇa-raṃsiyānubhāvena ketumālānubhāvena<br />
+chabbaṇṇa-raṁsiyānubhāvena ketumālānubhāvena<br />
 dasa-pāramitānubhāvena<br />
 dasa-upapāramitānubhāvena<br />
 dasa-paramattha-pāramitānubhāvena<br />
@@ -583,10 +585,10 @@ sabbaññuta-ñāṇānubhāvena<br />
 mettā-karuṇā-muditā-upekkhānubhāvena<br />
 sabba-parittānubhāvena<br />
 ratanattaya-saraṇānubhāvena<br />
-tuyhaṃ sabba-roga-sok’upaddava-\ dukkha-domanass’upāyāsā vinassantu<br />
+tuyhaṁ sabba-roga-sok’upaddava-\ dukkha-domanass’upāyāsā vinassantu<br />
 sabba-antarāyā pi vinassantu<br />
-sabba-saṅkappā tuyhaṃ samijjhantu<br />
-dīghāyukā tuyhaṃ hotu sata-vassa-jīvena<br />
+sabba-saṅkappā tuyhaṁ samijjhantu<br />
+dīghāyukā tuyhaṁ hotu sata-vassa-jīvena<br />
 samaṅgiko hotu sabbadā</p>
 <p>Ākāsa-pabbata-vana-bhūmi-gaṅgā-mahāsamuddā ārakkhakā
 devatā sadā tumhe anurakkhantu</p>
@@ -631,27 +633,27 @@ River Ganges, and the great ocean always protect you.</p>
 </blockquote>
 </div>
 <h2 id="vihāra-dāna-gāthā"><a class="header" href="#vihāra-dāna-gāthā">Vihāra-dāna-gāthā<a id="vihara-dana"></a></a></h2>
-<p>Sītaṃ uṇhaṃ paṭihanti<br />
+<p>Sītaṁ uṇhaṁ paṭihanti<br />
 <span class="vin"></span>tato vāḷamigāni ca<br />
-sariṃsape ca makase<br />
+sariṁsape ca makase<br />
 <span class="vin"></span>sisire cāpi vuṭṭhiyo<br />
 Tato vātātapo ghoro<br />
 <span class="vin"></span>sañjāto paṭihaññati<br />
 Leṇatthañ ca sukhatthañ ca<br />
-<span class="vin"></span>jhāyituñ ca vipassituṃ<br />
-Vihāradānaṃ saṅghassa<br />
-<span class="vin"></span>aggaṃ buddhehi vaṇṇitaṃ<br />
+<span class="vin"></span>jhāyituñ ca vipassituṁ<br />
+Vihāradānaṁ saṅghassa<br />
+<span class="vin"></span>aggaṁ buddhehi vaṇṇitaṁ<br />
 Tasmā hi paṇḍito poso<br />
-<span class="vin"></span>sampassaṃ attham attano<br />
+<span class="vin"></span>sampassaṁ attham attano<br />
 Vihāre kāraye ramme<br />
 <span class="vin"></span>vāsayettha bahu-ssute<br />
-Tesaṃ annañ ca pānañ ca<br />
+Tesaṁ annañ ca pānañ ca<br />
 <span class="vin"></span>vattha-senāsanāni ca<br />
 Dadeyya uju-bhūtesu<br />
 <span class="vin"></span>vippasannena cetasā<br />
-Te tassa dhammaṃ desenti<br />
-<span class="vin"></span>sabbadukkhāpanūdanaṃ<br />
-Yaṃ so dhammaṃ idh’aññāya<br />
+Te tassa dhammaṁ desenti<br />
+<span class="vin"></span>sabbadukkhāpanūdanaṁ<br />
+Yaṁ so dhammaṁ idh’aññāya<br />
 <span class="vin"></span>parinibbātayanāsavo’ti</p>
 <div class="english">
 <blockquote>
@@ -680,17 +682,17 @@ He, knowing that Dhamma,<br />
 <p>Dānañ-ca peyya-vajjañ-ca<br />
 <span class="vin"></span>attha-cariyā ca yā idha<br />
 Samānattatā ca dhammesu<br />
-<span class="vin"></span>tattha tattha yathā’rahaṃ<br />
+<span class="vin"></span>tattha tattha yathā’rahaṁ<br />
 Ete kho saṅgahā loke<br />
 <span class="vin"></span>rathass’āṇīva yāyato<br />
 Ete ca saṅgahā nāssu<br />
 <span class="vin"></span>na mātā putta-kāraṇā<br />
-Labhetha mānaṃ pūjaṃ vā<br />
+Labhetha mānaṁ pūjaṁ vā<br />
 <span class="vin"></span>pitā vā putta-kāraṇā<br />
 Yasmā ca saṅgahā ete<br />
 <span class="vin"></span>samavekkhanti paṇḍitā<br />
-Tasmā mahattaṃ papponti<br />
-<span class="vin"></span>pāsaṃsā ca bhavanti te’ti</p>
+Tasmā mahattaṁ papponti<br />
+<span class="vin"></span>pāsaṁsā ca bhavanti te’ti</p>
 <div class="english">
 <blockquote>
 <p>Generosity, kind words, beneficial action,<br />
@@ -711,13 +713,13 @@ Uddhaggā dakkhiṇā dinnā<br />
 <span class="vin"></span>atho pañca balī katā<br />
 Upaṭṭhitā sīlavanto<br />
 <span class="vin"></span>saññatā brahma-cārino<br />
-Yad-atthaṃ bhogam-iccheyya<br />
-<span class="vin"></span>paṇḍito gharam-āvasaṃ<br />
+Yad-atthaṁ bhogam-iccheyya<br />
+<span class="vin"></span>paṇḍito gharam-āvasaṁ<br />
 So me attho anuppatto<br />
-<span class="vin"></span>kataṃ ananutāpiyaṃ<br />
-Etaṃ anussaraṃ macco<br />
+<span class="vin"></span>kataṁ ananutāpiyaṁ<br />
+Etaṁ anussaraṁ macco<br />
 <span class="vin"></span>ariya-dhamme ṭhito naro<br />
-Idh’eva naṃ pasaṃsanti<br />
+Idh’eva naṁ pasaṁsanti<br />
 <span class="vin"></span>pecca sagge ca pamodatī’ti.</p>
 <div class="english">
 <blockquote>
@@ -735,8 +737,8 @@ He is praised in this life and, after death, rejoices in heaven.</p>
 <p><em>Verses on the Riches of a Noble One</em></p>
 <p>Yassa saddhā tathāgate<br />
 <span class="vin"></span>acalā supatiṭṭhitā<br />
-Sīlañ-ca yassa kalyāṇaṃ<br />
-<span class="vin"></span>ariya-kantaṃ pasaṃsitaṃ</p>
+Sīlañ-ca yassa kalyāṇaṁ<br />
+<span class="vin"></span>ariya-kantaṁ pasaṁsitaṁ</p>
 <div class="english">
 <blockquote>
 <p>One whose faith in the Tathāgata<br />
@@ -746,9 +748,9 @@ The Noble Ones enjoy and praise;</p>
 </blockquote>
 </div>
 <p>Saṅghe pasādo yass’atthi<br />
-<span class="vin"></span>uju-bhūtañ-ca dassanaṃ<br />
-Adaliddo-ti taṃ āhu<br />
-<span class="vin"></span>amoghaṃ tassa jīvitaṃ</p>
+<span class="vin"></span>uju-bhūtañ-ca dassanaṁ<br />
+Adaliddo-ti taṁ āhu<br />
+<span class="vin"></span>amoghaṁ tassa jīvitaṁ</p>
 <div class="english">
 <blockquote>
 <p>Whose trust is in the Saṅgha,<br />
@@ -758,9 +760,9 @@ And undeluded is their life.</p>
 </blockquote>
 </div>
 <p>Tasmā saddhañ-ca sīlañ-ca<br />
-<span class="vin"></span>pasādaṃ dhamma-dassanaṃ<br />
+<span class="vin"></span>pasādaṁ dhamma-dassanaṁ<br />
 Anuyuñjetha medhāvī<br />
-<span class="vin"></span>saraṃ buddhāna sāsanan’ti</p>
+<span class="vin"></span>saraṁ buddhāna sāsanan’ti</p>
 <div class="english">
 <blockquote>
 <p>To virtue and to faith,<br />
@@ -771,16 +773,16 @@ The Buddha’s teaching in their mind.</p>
 </div>
 <p><em>A.III.54</em></p>
 <h2 id="devatādissa-dakkhiṇānumodanā-gāthā"><a class="header" href="#devatādissa-dakkhiṇānumodanā-gāthā">Devat’ādissa-dakkhiṇā’numodanā-gāthā<a id="devat-adissa"></a></a></h2>
-<p>Yasmiṃ padese kappeti<br />
-<span class="vin"></span>vāsaṃ paṇḍita-jātiyo<br />
+<p>Yasmiṁ padese kappeti<br />
+<span class="vin"></span>vāsaṁ paṇḍita-jātiyo<br />
 Sīlavant’ettha bhojetvā<br />
 <span class="vin"></span>saññate brahma-cārino<br />
-Yā tattha devatā āsuṃ<br />
-<span class="vin"></span>tāsaṃ dakkhiṇam-ādise<br />
+Yā tattha devatā āsuṁ<br />
+<span class="vin"></span>tāsaṁ dakkhiṇam-ādise<br />
 Tā pūjitā pūjayanti<br />
-<span class="vin"></span>mānitā mānayanti naṃ<br />
-Tato naṃ anukampanti<br />
-<span class="vin"></span>mātā puttaṃ va orasaṃ<br />
+<span class="vin"></span>mānitā mānayanti naṁ<br />
+Tato naṁ anukampanti<br />
+<span class="vin"></span>mātā puttaṁ va orasaṁ<br />
 Devatā’nukampito poso<br />
 <span class="vin"></span>sadā bhadrāni passati</p>
 <div class="english">
