--- a/chants/evening-chanting.html
+++ b/chants/evening-chanting.html
@@ -91,7 +91,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="chapter-item expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="../chants/evening-chanting.html" class="active"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="../vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="../vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="../quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="../namo-tassa.html"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -195,21 +197,21 @@
 <li><a href="#closing-english">Closing Homage (English)</a></li>
 </ul>
 <h2 id="dedication-of-offerings"><a class="header" href="#dedication-of-offerings">Dedication of Offerings<a id="dedication-pali"></a></a></h2>
-<p>[Yo so] bhagavā arahaṃ sammāsambuddho<br />
+<p>[Yo so] bhagavā arahaṁ sammāsambuddho<br />
 Svākkhāto yena bhagavatā dhammo<br />
 Supaṭipanno yassa bhagavato sāvakasaṅgho<br />
-Tam-mayaṃ bhagavantaṃ sadhammaṃ sasaṅghaṃ<br />
-Imehi sakkārehi yathārahaṃ āropitehi abhipūjayāma<br />
+Tam-mayaṁ bhagavantaṁ sadhammaṁ sasaṅghaṁ<br />
+Imehi sakkārehi yathārahaṁ āropitehi abhipūjayāma<br />
 Sādhu no bhante bhagavā sucira-parinibbutopi<br />
 Pacchimā-janatānukampa-mānasā<br />
 Ime sakkāre duggata-paṇṇākāra-bhūte paṭiggaṇhātu<br />
-Amhākaṃ dīgharattaṃ hitāya sukhāya<br />
-Arahaṃ sammāsambuddho bhagavā<br />
-Buddhaṃ bhagavantaṃ abhivādemi</p>
+Amhākaṁ dīgharattaṁ hitāya sukhāya<br />
+Arahaṁ sammāsambuddho bhagavā<br />
+Buddhaṁ bhagavantaṁ abhivādemi</p>
 <p>[Svākkhāto] bhagavatā dhammo<br />
-Dhammaṃ namassāmi</p>
+Dhammaṁ namassāmi</p>
 <p>[Supaṭipanno] bhagavato sāvakasaṅgho<br />
-Saṅghaṃ namāmi</p>
+Saṅghaṁ namāmi</p>
 <h2 id="dedication-of-offerings-english"><a class="header" href="#dedication-of-offerings-english">Dedication of Offerings (English)<a id="dedication-english"></a></a></h2>
 <p>[To the Blessed One,] the Lord, who fully attained<br />
 perfect enlightenment,<br />
@@ -229,7 +231,7 @@ I bow to the Dhamma.</p>
 I bow to the Saṅgha.</p>
 <h2 id="preliminary-homage"><a class="header" href="#preliminary-homage">Preliminary Homage<a id="homage-pali"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ buddhassa bhagavato pubbabhāga-namakāraṃ karomase]</p>
+<p>[Handa mayaṁ buddhassa bhagavato pubbabhāga-namakāraṁ karomase]</p>
 </blockquote>
 <p>Namo tassa bhagavato arahato sammāsambuddhassa (×3)</p>
 <h2 id="preliminary-homage-english"><a class="header" href="#preliminary-homage-english">Preliminary Homage (English)<a id="homage-english"></a></a></h2>
@@ -239,12 +241,12 @@ I bow to the Saṅgha.</p>
 <p>Homage to the Blessed, Noble, and Perfectly Enlightened One. (×3)</p>
 <h2 id="recollection-of-the-buddha"><a class="header" href="#recollection-of-the-buddha">Recollection of the Buddha<a id="b-sati-pli"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ buddhānussatinayaṃ karomase]</p>
+<p>[Handa mayaṁ buddhānussatinayaṁ karomase]</p>
 </blockquote>
-<p>Taṃ kho pana bhagavantaṃ evaṃ kalyāṇo kittisaddo abbhuggato<br />
-Itipi so bhagavā arahaṃ sammāsambuddho<br />
+<p>Taṁ kho pana bhagavantaṁ evaṁ kalyāṇo kittisaddo abbhuggato<br />
+Itipi so bhagavā arahaṁ sammāsambuddho<br />
 Vijjācaraṇa-sampanno sugato lokavidū<br />
-Anuttaro purisadamma-sārathi satthā deva-manussānaṃ buddho bhagavā’ti</p>
+Anuttaro purisadamma-sārathi satthā deva-manussānaṁ buddho bhagavā’ti</p>
 <h2 id="recollection-of-the-buddha-english"><a class="header" href="#recollection-of-the-buddha-english">Recollection of the Buddha (English)<a id="b-sati-eng"></a></a></h2>
 <blockquote>
 <p>[Now let us chant the recollection of the Buddha.]</p>
@@ -258,31 +260,31 @@ He trains perfectly those who wish to be trained;<br />
 he is Teacher of gods and humans; he is Awake and Holy.</p>
 <h2 id="supreme-praise-of-the-buddha"><a class="header" href="#supreme-praise-of-the-buddha">Supreme Praise of the Buddha<a id="b-bhi-pli"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ buddhābhigītiṃ karomase]</p>
+<p>[Handa mayaṁ buddhābhigītiṁ karomase]</p>
 </blockquote>
 <p>Buddh’vārahanta-varatādiguṇābhiyutto<br />
 Suddhābhiñāṇa-karuṇāhi samāgatatto<br />
-Bodhesi yo sujanataṃ kamalaṃ va sūro<br />
-Vandām’ahaṃ tam-araṇaṃ sirasā jinendaṃ<br />
-Buddho yo sabba-pāṇīnaṃ saraṇaṃ khemam-uttamaṃ<br />
-Paṭhamānussatiṭṭhānaṃ vandāmi taṃ siren’ahaṃ<br />
+Bodhesi yo sujanataṁ kamalaṁ va sūro<br />
+Vandām’ahaṁ tam-araṇaṁ sirasā jinendaṁ<br />
+Buddho yo sabba-pāṇīnaṁ saraṇaṁ khemam-uttamaṁ<br />
+Paṭhamānussatiṭṭhānaṁ vandāmi taṁ siren’ahaṁ<br />
 Buddhassāh’asmi dāso/dāsī va buddho me sāmi-kissaro<br />
 Buddho dukkhassa ghātā ca vidhātā ca hitassa me<br />
-Buddhass’āhaṃ niyyādemi sarīrañ-jīvitañ-cidaṃ<br />
-Vandanto’haṃ/Vandantī’haṃ carissāmi buddhass’eva subodhitaṃ<br />
-Natthi me saraṇaṃ aññaṃ buddho me saraṇaṃ varaṃ<br />
-Etena sacca-vajjena vaḍḍheyyaṃ satthu-sāsane<br />
-Buddhaṃ me vandamānena/vandamānāya yaṃ puññaṃ pasutaṃ idha<br />
-Sabbepi antarāyā me māhesuṃ tassa tejasā</p>
+Buddhass’āhaṁ niyyādemi sarīrañ-jīvitañ-cidaṁ<br />
+Vandanto’haṁ/Vandantī’haṁ carissāmi buddhass’eva subodhitaṁ<br />
+Natthi me saraṇaṁ aññaṁ buddho me saraṇaṁ varaṁ<br />
+Etena sacca-vajjena vaḍḍheyyaṁ satthu-sāsane<br />
+Buddhaṁ me vandamānena/vandamānāya yaṁ puññaṁ pasutaṁ idha<br />
+Sabbepi antarāyā me māhesuṁ tassa tejasā</p>
 <div class="instr">
 <blockquote>
 <p>(Bowing)</p>
 </blockquote>
 </div>
 <p>Kāyena vācāya va cetasā vā<br />
-Buddhe kukammaṃ pakataṃ mayā yaṃ<br />
-Buddho paṭiggaṇhātu accayantaṃ<br />
-Kālantare saṃvarituṃ va buddhe</p>
+Buddhe kukammaṁ pakataṁ mayā yaṁ<br />
+Buddho paṭiggaṇhātu accayantaṁ<br />
+Kālantare saṁvarituṁ va buddhe</p>
 <h2 id="supreme-praise-of-the-buddha-english"><a class="header" href="#supreme-praise-of-the-buddha-english">Supreme Praise of the Buddha (English)<a id="b-bhi-eng"></a></a></h2>
 <blockquote>
 <p>[Now let us chant the supreme praise of the Buddha.]</p>
@@ -314,11 +316,11 @@ May my acknowledgement of fault be accepted,<br />
 That in future there may be restraint regarding the Buddha.</p>
 <h2 id="recollection-of-the-dhamma"><a class="header" href="#recollection-of-the-dhamma">Recollection of the Dhamma<a id="d-sati-pli"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ dhammānussatinayaṃ karomase]</p>
+<p>[Handa mayaṁ dhammānussatinayaṁ karomase]</p>
 </blockquote>
 <p>Svākkhāto bhagavatā dhammo<br />
 Sandiṭṭhiko akāliko ehipassiko<br />
-Opanayiko paccattaṃ veditabbo viññūhī’ti</p>
+Opanayiko paccattaṁ veditabbo viññūhī’ti</p>
 <h2 id="recollection-of-the-dhamma-english"><a class="header" href="#recollection-of-the-dhamma-english">Recollection of the Dhamma (English)<a id="d-sati-eng"></a></a></h2>
 <blockquote>
 <p>[Now let us chant the recollection of the Dhamma.]</p>
@@ -328,31 +330,31 @@ Apparent here and now, timeless, encouraging investigation,<br />
 Leading inwards, to be experienced individually by the wise.</p>
 <h2 id="supreme-praise-of-the-dhamma"><a class="header" href="#supreme-praise-of-the-dhamma">Supreme Praise of the Dhamma<a id="d-bhi-pali"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ dhammābhigītiṃ karomase]</p>
+<p>[Handa mayaṁ dhammābhigītiṁ karomase]</p>
 </blockquote>
 <p>Svākkhātat’ādiguṇa-yoga-vasena seyyo<br />
 Yo magga-pāka-pariyatti-vimokkha-bhedo<br />
 Dhammo kuloka-patanā tada-dhāri-dhārī<br />
-Vandām’ahaṃ tama-haraṃ vara-dhammam-etaṃ<br />
-Dhammo yo sabba-pāṇīnaṃ saraṇaṃ khemam-uttamaṃ<br />
-Dutiyānussatiṭṭhānaṃ vandāmi taṃ siren’ahaṃ<br />
+Vandām’ahaṁ tama-haraṁ vara-dhammam-etaṁ<br />
+Dhammo yo sabba-pāṇīnaṁ saraṇaṁ khemam-uttamaṁ<br />
+Dutiyānussatiṭṭhānaṁ vandāmi taṁ siren’ahaṁ<br />
 Dhammassāh’asmi dāso/dāsī va dhammo me sāmi-kissaro<br />
 Dhammo dukkhassa ghātā ca vidhātā ca hitassa me<br />
-Dhammass’āhaṃ niyyādemi sarīrañ-jīvitañ-cidaṃ<br />
-Vandantohaṃ/Vandantīhaṃ carissāmi dhammass’eva sudhammataṃ<br />
-Natthi me saraṇaṃ aññaṃ dhammo me saraṇaṃ varaṃ<br />
-Etena sacca-vajjena vaḍḍheyyaṃ satthu-sāsane<br />
-Dhammaṃ me vandamānena/vandamānāya yaṃ puññaṃ pasutaṃ idha<br />
-Sabbepi antarāyā me māhesuṃ tassa tejasā</p>
+Dhammass’āhaṁ niyyādemi sarīrañ-jīvitañ-cidaṁ<br />
+Vandantohaṁ/Vandantīhaṁ carissāmi dhammass’eva sudhammataṁ<br />
+Natthi me saraṇaṁ aññaṁ dhammo me saraṇaṁ varaṁ<br />
+Etena sacca-vajjena vaḍḍheyyaṁ satthu-sāsane<br />
+Dhammaṁ me vandamānena/vandamānāya yaṁ puññaṁ pasutaṁ idha<br />
+Sabbepi antarāyā me māhesuṁ tassa tejasā</p>
 <div class="instr">
 <blockquote>
 <p>(Bowing)</p>
 </blockquote>
 </div>
 <p>Kāyena vācāya va cetasā vā<br />
-Dhamme kukammaṃ pakataṃ mayā yaṃ<br />
-Dhammo paṭiggaṇhātu accayantaṃ<br />
-Kālantare saṃvarituṃ va dhamme</p>
+Dhamme kukammaṁ pakataṁ mayā yaṁ<br />
+Dhammo paṭiggaṇhātu accayantaṁ<br />
+Kālantare saṁvarituṁ va dhamme</p>
 <h2 id="supreme-praise-of-the-dhamma-english"><a class="header" href="#supreme-praise-of-the-dhamma-english">Supreme Praise of the Dhamma (English)<a id="d-bhi-eng"></a></a></h2>
 <blockquote>
 <p>[Now let us chant the supreme praise of the Dhamma.]</p>
@@ -382,16 +384,16 @@ May my acknowledgement of fault be accepted,<br />
 That in future there may be restraint regarding the Dhamma.</p>
 <h2 id="recollection-of-the-saṅgha"><a class="header" href="#recollection-of-the-saṅgha">Recollection of the Saṅgha<a id="s-sati-pli"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ saṅghānussatinayaṃ karomase]</p>
+<p>[Handa mayaṁ saṅghānussatinayaṁ karomase]</p>
 </blockquote>
 <p>Supaṭipanno bhagavato sāvakasaṅgho<br />
 Ujupaṭipanno bhagavato sāvakasaṅgho<br />
 Ñāyapaṭipanno bhagavato sāvakasaṅgho<br />
 Sāmīcipaṭipanno bhagavato sāvakasaṅgho<br />
-Yadidaṃ cattāri purisayugāni aṭṭha purisapuggalā<br />
+Yadidaṁ cattāri purisayugāni aṭṭha purisapuggalā<br />
 Esa bhagavato sāvakasaṅgho<br />
 Āhuneyyo pāhuneyyo dakkhiṇeyyo añjali-karaṇīyo<br />
-Anuttaraṃ puññakkhettaṃ lokassā’ti</p>
+Anuttaraṁ puññakkhettaṁ lokassā’ti</p>
 <h2 id="recollection-of-the-saṅgha-english"><a class="header" href="#recollection-of-the-saṅgha-english">Recollection of the Saṅgha (English)<a id="s-sati-eng"></a></a></h2>
 <blockquote>
 <p>[Now let us chant the recollection of the Saṅgha.]</p>
@@ -407,31 +409,31 @@ worthy of offerings, worthy of respect;<br />
 They give occasion for incomparable goodness to arise in the world.</p>
 <h2 id="supreme-praise-of-the-saṅgha"><a class="header" href="#supreme-praise-of-the-saṅgha">Supreme Praise of the Saṅgha<a id="s-bhi-pli"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ saṅghābhigītiṃ karomase]</p>
+<p>[Handa mayaṁ saṅghābhigītiṁ karomase]</p>
 </blockquote>
 <p>Saddhammajo supaṭipatti-guṇādiyutto<br />
 Yo’ṭṭhabbidho ariyapuggala-saṅgha-seṭṭho<br />
 Sīlādidhamma-pavarāsaya-kāya-citto<br />
-Vandām’ahaṃ tam-ariyāna-gaṇaṃ susuddhaṃ<br />
-Saṅgho yo sabba-pāṇīnaṃ saraṇaṃ khemam-uttamaṃ<br />
-Tatiyānussatiṭṭhānaṃ vandāmi taṃ siren’ahaṃ<br />
+Vandām’ahaṁ tam-ariyāna-gaṇaṁ susuddhaṁ<br />
+Saṅgho yo sabba-pāṇīnaṁ saraṇaṁ khemam-uttamaṁ<br />
+Tatiyānussatiṭṭhānaṁ vandāmi taṁ siren’ahaṁ<br />
 Saṅghass’āhasmi dāso/dāsī va saṅgho me sāmi-kissaro<br />
 Saṅgho dukkhassa ghātā ca vidhātā ca hitassa me<br />
-Saṅghass’āhaṃ niyyādemi sarīrañ-jīvitañ-cidaṃ<br />
-Vandanto’haṃ/Vandantī’haṃ carissāmi saṅghassopaṭipannataṃ<br />
-Natthi me saraṇaṃ aññaṃ saṅgho me saraṇaṃ varaṃ<br />
-Etena sacca-vajjena vaḍḍheyyaṃ satthu-sāsane<br />
-Saṅghaṃ me vandamānena/vandamānāya yaṃ puññaṃ pasutaṃ idha<br />
-Sabbepi antarāyā me māhesuṃ tassa tejasā</p>
+Saṅghass’āhaṁ niyyādemi sarīrañ-jīvitañ-cidaṁ<br />
+Vandanto’haṁ/Vandantī’haṁ carissāmi saṅghassopaṭipannataṁ<br />
+Natthi me saraṇaṁ aññaṁ saṅgho me saraṇaṁ varaṁ<br />
+Etena sacca-vajjena vaḍḍheyyaṁ satthu-sāsane<br />
+Saṅghaṁ me vandamānena/vandamānāya yaṁ puññaṁ pasutaṁ idha<br />
+Sabbepi antarāyā me māhesuṁ tassa tejasā</p>
 <div class="instr">
 <blockquote>
 <p>(Bowing)</p>
 </blockquote>
 </div>
 <p>Kāyena vācāya va cetasā vā<br />
-Saṅghe kukammaṃ pakataṃ mayā yaṃ<br />
-Saṅgho paṭiggaṇhātu accayantaṃ<br />
-Kālantare saṃvarituṃ va saṅghe</p>
+Saṅghe kukammaṁ pakataṁ mayā yaṁ<br />
+Saṅgho paṭiggaṇhātu accayantaṁ<br />
+Kālantare saṁvarituṁ va saṅghe</p>
 <h2 id="supreme-praise-of-the-saṅgha-english"><a class="header" href="#supreme-praise-of-the-saṅgha-english">Supreme Praise of the Saṅgha (English)<a id="s-bhi-eng"></a></a></h2>
 <blockquote>
 <p>[Now let us chant the supreme praise of the Saṅgha.]</p>
@@ -460,12 +462,12 @@ For whatever wrong action I have committed towards the Saṅgha,<br />
 May my acknowledgement of fault be accepted,<br />
 That in future there may be restraint regarding the Saṅgha.</p>
 <h2 id="closing-homage"><a class="header" href="#closing-homage">Closing Homage<a id="closing-pali"></a></a></h2>
-<p>[Arahaṃ] sammāsambuddho bhagavā<br />
-Buddhaṃ bhagavantaṃ abhivādemi</p>
+<p>[Arahaṁ] sammāsambuddho bhagavā<br />
+Buddhaṁ bhagavantaṁ abhivādemi</p>
 <p>[Svākkhāto] bhagavatā dhammo<br />
-Dhammaṃ namassāmi</p>
+Dhammaṁ namassāmi</p>
 <p>[Supaṭipanno] bhagavato sāvakasaṅgho<br />
-Saṅghaṃ namāmi</p>
+Saṅghaṁ namāmi</p>
 <h2 id="closing-homage-english"><a class="header" href="#closing-homage-english">Closing Homage (English)<a id="closing-english"></a></a></h2>
 <p>[The Lord,] the Perfectly Enlightened and Blessed One –<br />
 I render homage to the Buddha, the Blessed One.</p>
