--- a/quotations.html
+++ b/quotations.html
@@ -91,7 +91,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><a href="titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="first-lines.html">List of First Lines</a></li><li class="chapter-item expanded "><a href="essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="quotations.html" class="active"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="namo-tassa.html"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -187,7 +189,7 @@
 <li><a href="#the-four-bases-of-judgement">The Four Bases of Judgement</a></li>
 <li><a href="#the-five-facts-to-be-frequently-contemplated">The Five Facts to be Frequently Contemplated</a></li>
 <li><a href="#the-five-qualities-for-a-new-bhikkhu-to-establish">The Five Qualities for a New Bhikkhu to Establish</a></li>
-<li><a href="#the-five-ways-of-restraint">The Five Ways of Restraint (Saṃvara)</a></li>
+<li><a href="#the-five-ways-of-restraint">The Five Ways of Restraint (Saṁvara)</a></li>
 <li><a href="#the-six-attributes-of-dhamma">The Six Attributes of Dhamma</a></li>
 <li><a href="#the-seven-qualities-of-a-wholesome-friend">The Seven Qualities of a Wholesome Friend</a></li>
 <li><a href="#the-seven-things-favourable-to-mental-development">The Seven Things Favourable to Mental Development (Sappāya)</a></li>
@@ -268,7 +270,7 @@ bad, I must be heir to it.</p>
 restraint as regards talking; love of solitude; cultivation of right
 views.</p>
 <p><em>A.III.138</em></p>
-<h2 id="the-five-ways-of-restraint-saṃvara"><a class="header" href="#the-five-ways-of-restraint-saṃvara">The Five Ways of Restraint (Saṃvara)<a id="the-five-ways-of-restraint"></a></a></h2>
+<h2 id="the-five-ways-of-restraint-saṁvara"><a class="header" href="#the-five-ways-of-restraint-saṁvara">The Five Ways of Restraint (Saṁvara)<a id="the-five-ways-of-restraint"></a></a></h2>
 <p>Restraint by the Monastic Code of Discipline, by mindfulness, by
 knowledge, by patience, by energy and effort.</p>
 <p><em>Vism. 7</em></p>
@@ -330,7 +332,7 @@ give regularly; to calm one’s mind on giving; to be joyful after giving.</p>
 (7) <em>Sacca:</em> truthfulness;<br />
 (8) <em>Adhiṭṭhāna:</em> determination;<br />
 (9) <em>Mettā:</em> loving-kindness;<br />
-(10) <em>Upekkhā:</em> equanimity. <em>Buddhavaṃsa v.6</em></p>
+(10) <em>Upekkhā:</em> equanimity. <em>Buddhavaṁsa v.6</em></p>
 <h2 id="the-ten-wholesome-courses-of-action"><a class="header" href="#the-ten-wholesome-courses-of-action">The Ten Wholesome Courses of Action<a id="the-ten-wholesome-courses-of-action"></a></a></h2>
 <p>(1) To avoid the destruction of life and aim for the welfare of all
 lives.</p>
