--- a/chants/funeral-chants.html
+++ b/chants/funeral-chants.html
@@ -91,7 +91,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="chapter-item expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="../chants/funeral-chants.html" class="active"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="../vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="../vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="../quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="../namo-tassa.html"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -184,7 +186,7 @@
 <li><a href="#yamaka">Yamaka</a></li>
 <li><a href="#patthana">Paṭṭhāna-mātikā-pāṭha</a></li>
 <li><a href="#vipassana-bhumi">Vipassanā-bhūmi-pāṭha</a></li>
-<li><a href="#pamsukula">Paṃsukūla</a></li>
+<li><a href="#pamsukula">Paṁsukūla</a></li>
 </ul>
 <h2 id="dhamma-saṅgaṇī-mātikā"><a class="header" href="#dhamma-saṅgaṇī-mātikā">Dhamma-saṅgaṇī-mātikā<a id="matika"></a></a></h2>
 <p>Kusalā dhammā.<br />
@@ -412,34 +414,34 @@ phenomena without surface offering no resistance.</p>
 <h2 id="dhammasaṅgaṇī"><a class="header" href="#dhammasaṅgaṇī">Dhammasaṅgaṇī<a id="dhammasangani"></a></a></h2>
 <p>Kusalā dhammā, akusalā dhammā, abyākatā dhammā.</p>
 <p>Katame dhammā kusalā.</p>
-<p>Yasmiṃ samaye kāmāvacaraṃ kusalaṃ cittaṃ uppannaṃ hoti, somanassa-sahagataṃ
-ñāṇa-sampayuttaṃ, rūpārammaṇaṃ vā saddārammaṇaṃ vā gandhārammaṇaṃ vā
-rasārammaṇaṃ vā phoṭṭhabbārammaṇaṃ vā dhammārammaṇaṃ vā, yaṃ yaṃ vā panārabbha,
-tasmiṃ samaye phasso hoti, avikkhepo hoti, ye vā pana tasmiṃ samaye aññe pi atthi paṭicca-samuppannā arūpino dhammā, ime dhammā kusalā.</p>
+<p>Yasmiṁ samaye kāmāvacaraṁ kusalaṁ cittaṁ uppannaṁ hoti, somanassa-sahagataṁ
+ñāṇa-sampayuttaṁ, rūpārammaṇaṁ vā saddārammaṇaṁ vā gandhārammaṇaṁ vā
+rasārammaṇaṁ vā phoṭṭhabbārammaṇaṁ vā dhammārammaṇaṁ vā, yaṁ yaṁ vā panārabbha,
+tasmiṁ samaye phasso hoti, avikkhepo hoti, ye vā pana tasmiṁ samaye aññe pi atthi paṭicca-samuppannā arūpino dhammā, ime dhammā kusalā.</p>
 <p><em>Dhammasaṅganī 56</em></p>
 <h2 id="vibhaṅga"><a class="header" href="#vibhaṅga">Vibhaṅga<a id="vibhanga"></a></a></h2>
 <p>Pañcakkhandhā rūpakkhandho, vedanākkhandho, saññākkhandho, saṅkhārakkhandho,
 viññāṇakkhandho.</p>
 <p>Tattha katamo rūpakkhandho.</p>
-<p>Yaṃ kiñci rūpaṃ atītānāgata-paccuppannaṃ ajjhattaṃ vā bahiddhā vā oḷārikaṃ vā
-sukhumaṃ vā hīnaṃ vā paṇītaṃ vā yaṃ dūre santike vā, tad ekajjhaṃ
-abhisaññūhitvā abhisaṅkhipitvā, ayaṃ vuccati rūpakkhandho.</p>
+<p>Yaṁ kiñci rūpaṁ atītānāgata-paccuppannaṁ ajjhattaṁ vā bahiddhā vā oḷārikaṁ vā
+sukhumaṁ vā hīnaṁ vā paṇītaṁ vā yaṁ dūre santike vā, tad ekajjhaṁ
+abhisaññūhitvā abhisaṅkhipitvā, ayaṁ vuccati rūpakkhandho.</p>
 <p><em>Vibhaṅga 1</em></p>
 <h2 id="dhātukathā"><a class="header" href="#dhātukathā">Dhātukathā<a id="dhatukatha"></a></a></h2>
 <p>Saṅgaho asaṅgaho,<br />
-saṅgahitena asaṅgahitaṃ,<br />
-asaṅgahitena saṅgahitaṃ,<br />
-saṅgahitena saṅgahitaṃ,<br />
-asaṅgahitena asaṅgahitaṃ,<br />
+saṅgahitena asaṅgahitaṁ,<br />
+asaṅgahitena saṅgahitaṁ,<br />
+saṅgahitena saṅgahitaṁ,<br />
+asaṅgahitena asaṅgahitaṁ,<br />
 sampayogo vippayogo,<br />
-sampayuttena vippayuttaṃ,<br />
-vippayuttena sampayuttaṃ,<br />
-asaṅgahitaṃ.</p>
+sampayuttena vippayuttaṁ,<br />
+vippayuttena sampayuttaṁ,<br />
+asaṅgahitaṁ.</p>
 <p><em>Dhātukathā 1</em></p>
 <h2 id="puggalapaññatti"><a class="header" href="#puggalapaññatti">Puggalapaññatti<a id="puggalapannatti"></a></a></h2>
 <p>Cha paññattiyo khandhapaññatti, āyatanapaññatti, dhātupaññatti, saccapaññatti,
 indriyapaññatti, puggalapaññattī’ti.</p>
-<p>Kittāvatā puggalānaṃ puggalapaññatti.</p>
+<p>Kittāvatā puggalānaṁ puggalapaññatti.</p>
 <p>Samayavimutto, asamayavimutto,<br />
 kuppadhammo, akuppadhammo,<br />
 parihānadhammo, aparihānadhammo,<br />
@@ -456,8 +458,8 @@ arahā, arahattāya paṭipanno.</p>
 <p>Āmantā.</p>
 <p>Yo saccikaṭṭho paramattho, tato so puggalo upalabbhati
 saccikaṭṭha-paramatthenā’ti.</p>
-<p>Na h’evaṃ vattabbe.</p>
-<p>Ājānāhi niggahaṃ. Hañci puggalo upalabbhati
+<p>Na h’evaṁ vattabbe.</p>
+<p>Ājānāhi niggahaṁ. Hañci puggalo upalabbhati
 saccikaṭṭha-paramatthena, tena vata re vattabbe.</p>
 <p>Yo saccikaṭṭho paramattho, tato so puggalo upalabbhati
 saccikaṭṭha-paramatthenā’ti micchā.</p>
@@ -521,12 +523,12 @@ group, the consciousness group.</p>
 </blockquote>
 </div>
 <p>Dvā-das’āyatanāni:<br />
-Cakkhv-āyatanaṃ rūp’āyatanaṃ,<br />
-Sot’āyatanaṃ sadd’āyatanaṃ,<br />
-Ghān’āyatanaṃ gandh’āyatanaṃ,<br />
-Jivh’āyatanaṃ ras’āyatanaṃ<br />
-Kāy’āyatanaṃ phoṭṭhabb’āyatanaṃ<br />
-Man’āyatanaṃ dhamm’āyatanaṃ.</p>
+Cakkhv-āyatanaṁ rūp’āyatanaṁ,<br />
+Sot’āyatanaṁ sadd’āyatanaṁ,<br />
+Ghān’āyatanaṁ gandh’āyatanaṁ,<br />
+Jivh’āyatanaṁ ras’āyatanaṁ<br />
+Kāy’āyatanaṁ phoṭṭhabb’āyatanaṁ<br />
+Man’āyatanaṁ dhamm’āyatanaṁ.</p>
 <div class="english">
 <blockquote>
 <p>The twelve spheres:<br />
@@ -557,15 +559,15 @@ the intellect-element, ideas-element, intellect-consciousness-element.</p>
 </blockquote>
 </div>
 <p>Bā-vīsat’indriyāni:<br />
-Cakkhu’ndriyaṃ sot’indriyaṃ ghān’indriyaṃ,<br />
-jivh’indriyaṃ kāy’indriyaṃ man’indriyaṃ,<br />
-Itth’indriyaṃ puris’indriyaṃ jīvit’indriyaṃ,<br />
-Sukh’indriyaṃ dukkh’indriyaṃ,<br />
-somanass’indriyaṃ domanass’indriyaṃ upekkh’indriyaṃ,<br />
-saddh’indriyaṃ viriy’indriyaṃ sat’indriyaṃ<br />
-samādh’indriyaṃ paññ’indriyaṃ,<br />
-Anaññātañ-ñassāmī-t’indriyaṃ aññ’indriyaṃ<br />
-aññātāv’indriyaṃ.</p>
+Cakkhu’ndriyaṁ sot’indriyaṁ ghān’indriyaṁ,<br />
+jivh’indriyaṁ kāy’indriyaṁ man’indriyaṁ,<br />
+Itth’indriyaṁ puris’indriyaṁ jīvit’indriyaṁ,<br />
+Sukh’indriyaṁ dukkh’indriyaṁ,<br />
+somanass’indriyaṁ domanass’indriyaṁ upekkh’indriyaṁ,<br />
+saddh’indriyaṁ viriy’indriyaṁ sat’indriyaṁ<br />
+samādh’indriyaṁ paññ’indriyaṁ,<br />
+Anaññātañ-ñassāmī-t’indriyaṁ aññ’indriyaṁ<br />
+aññātāv’indriyaṁ.</p>
 <div class="english">
 <blockquote>
 <p>The twenty two facuties:<br />
@@ -581,10 +583,10 @@ one who has fully known-faculty.</p>
 </blockquote>
 </div>
 <p>Cattāri ariya-saccāni:<br />
-Dukkhaṃ ariya-saccaṃ,<br />
-Dukkha-samudayo ariya-saccaṃ,<br />
-Dukkha-nirodho ariya-saccaṃ,<br />
-Dukkha-nirodha-gāminī paṭipadā ariya-saccaṃ.</p>
+Dukkhaṁ ariya-saccaṁ,<br />
+Dukkha-samudayo ariya-saccaṁ,<br />
+Dukkha-nirodho ariya-saccaṁ,<br />
+Dukkha-nirodha-gāminī paṭipadā ariya-saccaṁ.</p>
 <div class="english">
 <blockquote>
 <p>The Four Noble Truths:<br />
@@ -595,16 +597,16 @@ the noble truth of the way of practice leading to the cessation of suffering.</p
 </blockquote>
 </div>
 <p>Avijjā-paccayā saṅkhārā,<br />
-Saṅkhāra-paccayā viññāṇaṃ,<br />
-Viññāṇa-paccayā nāma-rūpaṃ,<br />
-Nāma-rūpa-paccayā saḷ-āyatanaṃ,<br />
+Saṅkhāra-paccayā viññāṇaṁ,<br />
+Viññāṇa-paccayā nāma-rūpaṁ,<br />
+Nāma-rūpa-paccayā saḷ-āyatanaṁ,<br />
 Saḷ-āyatana-paccayā phasso,<br />
 Phassa-paccayā vedanā,<br />
 Vedanā-paccayā taṇhā,<br />
-Taṇhā-paccayā upādānaṃ,<br />
+Taṇhā-paccayā upādānaṁ,<br />
 Upādāna-paccayā bhavo,<br />
 Bhava-paccayā jāti,<br />
-Jāti-paccayā jarā-maraṇaṃ soka-parideva-dukkha-domanass’upāyāsā sambhavanti.<br />
+Jāti-paccayā jarā-maraṇaṁ soka-parideva-dukkha-domanass’upāyāsā sambhavanti.<br />
 Evam-etassa kevalassa dukkhakkhandhassa samudayo hoti.</p>
 <div class="english">
 <blockquote>
@@ -632,7 +634,7 @@ Vedanā-nirodhā taṇhā-nirodho,<br />
 Taṇhā-nirodhā upādāna-nirodho,<br />
 Upādāna-nirodhā bhava-nirodho,<br />
 Bhava-nirodhā jāti-nirodho,<br />
-Jāti-nirodhā jarā-maraṇaṃ soka-parideva-dukkha-domanass’upāyāsā nirujjhanti.<br />
+Jāti-nirodhā jarā-maraṇaṁ soka-parideva-dukkha-domanass’upāyāsā nirujjhanti.<br />
 Evam-etassa kevalassa dukkhakkhandhassa nirodho hoti.</p>
 <div class="english">
 <blockquote>
@@ -651,7 +653,7 @@ From the cessation of birth, then aging and death, sorrow, lamentation, pain, di
 </blockquote>
 </div>
 <p><em>M.III.15f; M.III.280f; M.III.62; M.III.249f; S.II.1f</em></p>
-<h2 id="paṃsukūla"><a class="header" href="#paṃsukūla">Paṃsukūla<a id="pamsukula"></a></a></h2>
+<h2 id="paṁsukūla"><a class="header" href="#paṁsukūla">Paṁsukūla<a id="pamsukula"></a></a></h2>
 <div class="instr">
 <blockquote>
 <p>The following verses are often repeated three times.</p>
@@ -661,11 +663,11 @@ From the cessation of birth, then aging and death, sorrow, lamentation, pain, di
 <p>Aniccā vata saṅkhārā<br />
 Uppāda-vaya-dhammino<br />
 Uppajjitvā nirujjhanti<br />
-Tesaṃ vūpasamo sukho.</p>
+Tesaṁ vūpasamo sukho.</p>
 <p>Sabbe sattā maranti ca<br />
-Mariṃsu ca marissare<br />
-Tath’evāhaṃ marissāmi<br />
-N’atthi me ettha saṃsayo.</p>
+Mariṁsu ca marissare<br />
+Tath’evāhaṁ marissāmi<br />
+N’atthi me ettha saṁsayo.</p>
 <div class="english">
 <blockquote>
 <p>How inconstant are fabrications!<br />
@@ -681,22 +683,22 @@ I have no doubt about this.</p>
 </blockquote>
 </div>
 <p><em>D.II.157; S.I.6</em></p>
-<p>Addhuvaṃ jīvitaṃ<br />
-Dhuvaṃ maraṇaṃ<br />
-Avassaṃ mayā maritabbaṃ<br />
-Maraṇapariyosānaṃ me jīvitaṃ<br />
-Jīvitaṃ me aniyataṃ<br />
-Maraṇaṃ me niyataṃ.</p>
+<p>Addhuvaṁ jīvitaṁ<br />
+Dhuvaṁ maraṇaṁ<br />
+Avassaṁ mayā maritabbaṁ<br />
+Maraṇapariyosānaṁ me jīvitaṁ<br />
+Jīvitaṁ me aniyataṁ<br />
+Maraṇaṁ me niyataṁ.</p>
 <p><em>DhpA.III.170</em></p>
 <div class="instr">
 <blockquote>
 <p>(For the living)</p>
 </blockquote>
 </div>
-<p>Aciraṃ vat’ayaṃ kāyo<br />
-Paṭhaviṃ adhisessati<br />
+<p>Aciraṁ vat’ayaṁ kāyo<br />
+Paṭhaviṁ adhisessati<br />
 Chuḍḍho apeta-viññāṇo<br />
-Niratthaṃ va kaliṅgaraṃ.</p>
+Niratthaṁ va kaliṅgaraṁ.</p>
 <div class="english">
 <blockquote>
 <p>Not long, alas – and it will lie<br />
