--- a/chants/morning-chanting.html
+++ b/chants/morning-chanting.html
@@ -91,7 +91,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="chapter-item expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../chants/morning-chanting.html" class="active"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="../vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="../vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="../quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="../namo-tassa.html"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -191,21 +193,21 @@
 <li><a href="#closing-english">Closing Homage (English)</a></li>
 </ul>
 <h2 id="dedication-of-offerings"><a class="header" href="#dedication-of-offerings">Dedication of Offerings<a id="yo-so-bhagava"></a></a></h2>
-<p>[Yo so] bhagavā arahaṃ sammāsambuddho<br />
+<p>[Yo so] bhagavā arahaṁ sammāsambuddho<br />
 Svākkhāto yena bhagavatā dhammo<br />
 Supaṭipanno yassa bhagavato sāvakasaṅgho<br />
-Tam-mayaṃ bhagavantaṃ sadhammaṃ sasaṅghaṃ<br />
-Imehi sakkārehi yathārahaṃ āropitehi abhipūjayāma<br />
+Tam-mayaṁ bhagavantaṁ sadhammaṁ sasaṅghaṁ<br />
+Imehi sakkārehi yathārahaṁ āropitehi abhipūjayāma<br />
 Sādhu no bhante bhagavā sucira-parinibbutopi<br />
 Pacchimā-janatānukampa-mānasā<br />
 Ime sakkāre duggata-paṇṇākāra-bhūte paṭiggaṇhātu<br />
-Amhākaṃ dīgharattaṃ hitāya sukhāya<br />
-Arahaṃ sammāsambuddho bhagavā<br />
-Buddhaṃ bhagavantaṃ abhivādemi<br />
+Amhākaṁ dīgharattaṁ hitāya sukhāya<br />
+Arahaṁ sammāsambuddho bhagavā<br />
+Buddhaṁ bhagavantaṁ abhivādemi<br />
 [Svākkhāto] bhagavatā dhammo<br />
-Dhammaṃ namassāmi<br />
+Dhammaṁ namassāmi<br />
 [Supaṭipanno] bhagavato sāvakasaṅgho<br />
-Saṅghaṃ namāmi</p>
+Saṅghaṁ namāmi</p>
 <h2 id="dedication-of-offerings-english"><a class="header" href="#dedication-of-offerings-english">Dedication of Offerings (English)<a id="dedication"></a></a></h2>
 <p>To the Blessed One, the Lord, who fully attained perfect enlightenment,<br />
 To the Teaching which he expounded so well,<br />
@@ -224,7 +226,7 @@ I bow to the Dhamma.</p>
 I bow to the Saṅgha.</p>
 <h2 id="preliminary-homage"><a class="header" href="#preliminary-homage">Preliminary Homage<a id="homage-pali"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ buddhassa bhagavato pubbabhāga-namakāraṃ karomase]</p>
+<p>[Handa mayaṁ buddhassa bhagavato pubbabhāga-namakāraṁ karomase]</p>
 </blockquote>
 <p>Namo tassa bhagavato arahato sammāsambuddhassa (×3)</p>
 <h2 id="preliminary-homage-english"><a class="header" href="#preliminary-homage-english">Preliminary Homage (English)<a id="homage-english"></a></a></h2>
@@ -234,17 +236,17 @@ I bow to the Saṅgha.</p>
 <p>Homage to the Blessed, Noble, and Perfectly Enlightened One. (×3)</p>
 <h2 id="homage-to-the-buddha"><a class="header" href="#homage-to-the-buddha">Homage to the Buddha<a id="buddha-pali"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ buddhābhitthutiṃ karomase]</p>
+<p>[Handa mayaṁ buddhābhitthutiṁ karomase]</p>
 </blockquote>
-<p>Yo so tathāgato arahaṃ sammāsambuddho<br />
+<p>Yo so tathāgato arahaṁ sammāsambuddho<br />
 Vijjācaraṇa-sampanno, sugato, lokavidū<br />
 Anuttaro purisadamma-sārathi<br />
-Satthā deva-manussānaṃ, buddho bhagavā.</p>
-<p>Yo imaṃ lokaṃ sadevakaṃ samārakaṃ sabrahmakaṃ<br />
-Sassamaṇa-brāhmaṇiṃ pajaṃ sadeva-manussaṃ sayaṃ abhiññā sacchikatvā pavedesi<br />
-Yo dhammaṃ desesi ādi-kalyāṇaṃ majjhe-kalyāṇaṃ pariyosāna-kalyāṇaṃ<br />
-Sātthaṃ sabyañjanaṃ kevala-paripuṇṇaṃ parisuddhaṃ brahma-cariyaṃ pakāsesi<br />
-Tam-ahaṃ bhagavantaṃ abhipūjayāmi tam-ahaṃ bhagavantaṃ sirasā namāmi</p>
+Satthā deva-manussānaṁ, buddho bhagavā.</p>
+<p>Yo imaṁ lokaṁ sadevakaṁ samārakaṁ sabrahmakaṁ<br />
+Sassamaṇa-brāhmaṇiṁ pajaṁ sadeva-manussaṁ sayaṁ abhiññā sacchikatvā pavedesi<br />
+Yo dhammaṁ desesi ādi-kalyāṇaṁ majjhe-kalyāṇaṁ pariyosāna-kalyāṇaṁ<br />
+Sātthaṁ sabyañjanaṁ kevala-paripuṇṇaṁ parisuddhaṁ brahma-cariyaṁ pakāsesi<br />
+Tam-ahaṁ bhagavantaṁ abhipūjayāmi tam-ahaṁ bhagavantaṁ sirasā namāmi</p>
 <h2 id="homage-to-the-buddha-english"><a class="header" href="#homage-to-the-buddha-english">Homage to the Buddha (English)<a id="buddha-english"></a></a></h2>
 <blockquote>
 <p>[Now let us chant in praise of the Buddha.]</p>
@@ -263,12 +265,12 @@ He has explained the Spiritual Life of complete purity in its essence and conven
 I chant my praise to the Blessed One, I bow my head to the Blessed One.</p>
 <h2 id="homage-to-the-dhamma"><a class="header" href="#homage-to-the-dhamma">Homage to the Dhamma<a id="dhamma-pali"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ dhammābhitthutiṃ karomase]</p>
+<p>[Handa mayaṁ dhammābhitthutiṁ karomase]</p>
 </blockquote>
 <p>Yo so svākkhāto bhagavatā dhammo<br />
 Sandiṭṭhiko, akāliko, ehipassiko, opanayiko<br />
-Paccattaṃ veditabbo viññūhi<br />
-Tam-ahaṃ dhammaṃ abhipūjayāmi tam-ahaṃ dhammaṃ sirasā namāmi</p>
+Paccattaṁ veditabbo viññūhi<br />
+Tam-ahaṁ dhammaṁ abhipūjayāmi tam-ahaṁ dhammaṁ sirasā namāmi</p>
 <h2 id="homage-to-the-dhamma-english"><a class="header" href="#homage-to-the-dhamma-english">Homage to the Dhamma (English)<a id="dhamma-english"></a></a></h2>
 <blockquote>
 <p>[Now let us chant in praise of the Dhamma.]</p>
@@ -282,17 +284,17 @@ To be experienced individually by the wise.<br />
 I chant my praise to this Teaching, I bow my head to this Truth.</p>
 <h2 id="homage-to-the-saṅgha"><a class="header" href="#homage-to-the-saṅgha">Homage to the Saṅgha<a id="sangha-pali"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ saṅghābhitthutiṃ karomase]</p>
+<p>[Handa mayaṁ saṅghābhitthutiṁ karomase]</p>
 </blockquote>
 <p>Yo so supaṭipanno bhagavato sāvakasaṅgho<br />
 Ujupaṭipanno bhagavato sāvakasaṅgho<br />
 Ñāyapaṭipanno bhagavato sāvakasaṅgho<br />
 Sāmīcipaṭipanno bhagavato sāvakasaṅgho<br />
-Yadidaṃ cattāri purisayugāni aṭṭha purisapuggalā<br />
+Yadidaṁ cattāri purisayugāni aṭṭha purisapuggalā<br />
 Esa bhagavato sāvakasaṅgho<br />
 Āhuneyyo, pāhuneyyo, dakkhiṇeyyo, añjali-karaṇīyo<br />
-Anuttaraṃ puññakkhettaṃ lokassa<br />
-Tam-ahaṃ saṅghaṃ abhipūjayāmi tam-ahaṃ saṅghaṃ sirasā namāmi</p>
+Anuttaraṁ puññakkhettaṁ lokassa<br />
+Tam-ahaṁ saṅghaṁ abhipūjayāmi tam-ahaṁ saṅghaṁ sirasā namāmi</p>
 <h2 id="homage-to-the-saṅgha-english"><a class="header" href="#homage-to-the-saṅgha-english">Homage to the Saṅgha (English)<a id="sangha-english"></a></a></h2>
 <blockquote>
 <p>[Now let us chant in praise of the Saṅgha.]</p>
@@ -311,64 +313,64 @@ They give occasion for incomparable goodness to arise in the world.<br />
 I chant my praise to this Saṅgha, I bow my head to this Saṅgha.</p>
 <h2 id="salutation-to-the-triple-gem"><a class="header" href="#salutation-to-the-triple-gem">Salutation to the Triple Gem<a id="buddho-susuddho"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ ratanattaya-paṇāma-gāthāyo c’eva saṃvega-parikittana-pāṭhañca bhaṇāmase]</p>
+<p>[Handa mayaṁ ratanattaya-paṇāma-gāthāyo c’eva saṁvega-parikittana-pāṭhañca bhaṇāmase]</p>
 </blockquote>
 <p>Buddho susuddho karuṇā-mahaṇṇavo<br />
 Yo’ccanta-suddhabbara-ñāṇa-locano<br />
 Lokassa pāpūpakilesa-ghātako<br />
-Vandāmi buddhaṃ aham-ādarena taṃ<br />
+Vandāmi buddhaṁ aham-ādarena taṁ<br />
 Dhammo padīpo viya tassa satthuno<br />
 Yo magga-pākāmata-bheda-bhinnako<br />
 Lokuttaro yo ca tad-attha-dīpano<br />
-Vandāmi dhammaṃ aham-ādarena taṃ<br />
+Vandāmi dhammaṁ aham-ādarena taṁ<br />
 Saṅgho sukhettābhyati-khetta-saññito<br />
 Yo diṭṭha-santo sugatānubodhako<br />
 Lolappahīno ariyo sumedhaso<br />
-Vandāmi saṅghaṃ aham-ādarena taṃ<br />
-Iccevam-ekantabhipūja-neyyakaṃ vatthuttayaṃ vandayatābhisaṅkhataṃ<br />
-Puññaṃ mayā yaṃ mama sabbupaddavā mā hontu ve tassa pabhāva-siddhiyā</p>
-<p>Idha tathāgato loke uppanno arahaṃ sammāsambuddho<br />
+Vandāmi saṅghaṁ aham-ādarena taṁ<br />
+Iccevam-ekantabhipūja-neyyakaṁ vatthuttayaṁ vandayatābhisaṅkhataṁ<br />
+Puññaṁ mayā yaṁ mama sabbupaddavā mā hontu ve tassa pabhāva-siddhiyā</p>
+<p>Idha tathāgato loke uppanno arahaṁ sammāsambuddho<br />
 Dhammo ca desito niyyāniko upasamiko parinibbāniko sambodhagāmī sugatappavedito<br />
-Mayan-taṃ dhammaṃ sutvā evaṃ jānāma</p>
+Mayan-taṁ dhammaṁ sutvā evaṁ jānāma</p>
 <p>Jātipi dukkhā<br />
 Jarāpi dukkhā<br />
-Maraṇampi dukkhaṃ<br />
+Maraṇampi dukkhaṁ<br />
 Soka-parideva-dukkha-domanass’upāyāsāpi dukkhā<br />
 Appiyehi sampayogo dukkho<br />
 Piyehi vippayogo dukkho<br />
-Yamp’icchaṃ na labhati tampi dukkhaṃ<br />
+Yamp’icchaṁ na labhati tampi dukkhaṁ<br />
 Saṅkhittena pañcupādānakkhandhā dukkhā</p>
-<p>Seyyathīdaṃ<br />
+<p>Seyyathīdaṁ<br />
 Rūpūpādānakkhandho<br />
 Vedanūpādānakkhandho<br />
 Saññūpādānakkhandho<br />
 Saṅkhārūpādānakkhandho<br />
 Viññāṇūpādānakkhandho</p>
-<p>Yesaṃ pariññāya<br />
-Dharamāno so bhagavā evaṃ bahulaṃ sāvake vineti<br />
-Evaṃ bhāgā ca panassa bhagavato sāvakesu anusāsanī bahulā pavattati</p>
-<p>Rūpaṃ aniccaṃ<br />
+<p>Yesaṁ pariññāya<br />
+Dharamāno so bhagavā evaṁ bahulaṁ sāvake vineti<br />
+Evaṁ bhāgā ca panassa bhagavato sāvakesu anusāsanī bahulā pavattati</p>
+<p>Rūpaṁ aniccaṁ<br />
 Vedanā aniccā<br />
 Saññā aniccā<br />
 Saṅkhārā aniccā<br />
-Viññāṇaṃ aniccaṃ<br />
-Rūpaṃ anattā<br />
+Viññāṇaṁ aniccaṁ<br />
+Rūpaṁ anattā<br />
 Vedanā anattā<br />
 Saññā anattā<br />
 Saṅkhārā anattā<br />
-Viññāṇaṃ anattā<br />
+Viññāṇaṁ anattā<br />
 Sabbe saṅkhārā aniccā<br />
 Sabbe dhammā anattā’ti</p>
-<p>Te mayaṃ otiṇṇāmha jātiyā jarā-maraṇena<br />
+<p>Te mayaṁ otiṇṇāmha jātiyā jarā-maraṇena<br />
 Sokehi paridevehi dukkhehi domanassehi upāyāsehi<br />
 Dukkhotiṇṇā dukkha-paretā<br />
 Appeva nāmimassa kevalassa dukkha-kkhandhassa<br />
 antakiriyā paññāyethā’ti</p>
-<p>Cira-parinibbutampi taṃ bhagavantaṃ uddissa arahantaṃ sammāsambuddhaṃ<br />
-Saddhā agārasmā anagāriyaṃ pabbajitā<br />
-Tasmiṃ bhagavati brahma-cariyaṃ carāma<br />
-Bhikkhūnaṃ/Sīladharānaṃ sikkhāsājīva-samāpannā<br />
-Taṃ no brahma-cariyaṃ imassa kevalassa dukkha-kkhandhassa antakiriyāya saṃvattatu</p>
+<p>Cira-parinibbutampi taṁ bhagavantaṁ uddissa arahantaṁ sammāsambuddhaṁ<br />
+Saddhā agārasmā anagāriyaṁ pabbajitā<br />
+Tasmiṁ bhagavati brahma-cariyaṁ carāma<br />
+Bhikkhūnaṁ/Sīladharānaṁ sikkhāsājīva-samāpannā<br />
+Taṁ no brahma-cariyaṁ imassa kevalassa dukkha-kkhandhassa antakiriyāya saṁvattatu</p>
 <h2 id="salutation-to-the-triple-gem-english"><a class="header" href="#salutation-to-the-triple-gem-english">Salutation to the Triple Gem (English)<a id="salutation-english"></a></a></h2>
 <blockquote>
 <p>[Now let us chant our salutation to the Triple Gem and a passage to arouse urgency.]</p>
@@ -432,7 +434,7 @@ Let us all aspire to complete freedom from suffering.</p>
 We have gone forth with faith from home to homelessness,<br />
 And like the Blessed One, we practise the Holy Life,<br />
 Being fully equipped with the bhikkhus’/nuns’ system of training.<br />
-May this Holy Life lead us to the end of this whole mass of suffering.</p>
+May this Holy Life lead us to the end of this whole mass of suffering.\</p>
 <div class="instr">
 <blockquote>
 <p>An alternative version of the preceding section, which can be chanted by laypeople as well.</p>
@@ -444,12 +446,12 @@ Attentively we follow the pathway of that Blessed One, with all of our mindfulne
 May then the cultivation of this practice<br />
 Lead us to the end of every kind of suffering.</p>
 <h2 id="closing-homage"><a class="header" href="#closing-homage">Closing Homage<a id="closing-pali"></a></a></h2>
-<p>[Arahaṃ] sammāsambuddho bhagavā<br />
-Buddhaṃ bhagavantaṃ abhivādemi</p>
+<p>[Arahaṁ] sammāsambuddho bhagavā<br />
+Buddhaṁ bhagavantaṁ abhivādemi</p>
 <p>[Svākkhāto] bhagavatā dhammo<br />
-Dhammaṃ namassāmi</p>
+Dhammaṁ namassāmi</p>
 <p>[Supaṭipanno] bhagavato sāvakasaṅgho<br />
-Saṅghaṃ namāmi</p>
+Saṅghaṁ namāmi</p>
 <h2 id="closing-homage-english"><a class="header" href="#closing-homage-english">Closing Homage (English)<a id="closing-english"></a></a></h2>
 <p>The Lord, the Perfectly Enlightened and Blessed One –<br />
 I render homage to the Buddha, the Blessed One.</p>
