--- a/chants/patimokkha-chants.html
+++ b/chants/patimokkha-chants.html
@@ -91,7 +91,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="chapter-item expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="../chants/patimokkha-chants.html" class="active"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="../vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="../vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="../quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="../namo-tassa.html"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -184,9 +186,9 @@
 <h2 id="ovāda-pāṭimokkha-gāthā"><a class="header" href="#ovāda-pāṭimokkha-gāthā">Ovāda-pāṭimokkha-gāthā<a id="ovada"></a></a></h2>
 <p><em>Verses on the Training Code</em></p>
 <blockquote>
-<p>[Handa mayaṃ ovāda-pāṭimokkha-gāthāyo bhaṇāmase]</p>
+<p>[Handa mayaṁ ovāda-pāṭimokkha-gāthāyo bhaṇāmase]</p>
 </blockquote>
-<p>Sabba-pāpassa akaraṇaṃ</p>
+<p>Sabba-pāpassa akaraṇaṁ</p>
 <div class="english">
 <blockquote>
 <p>Not doing any evil;</p>
@@ -198,26 +200,26 @@
 <p>To be committed to the good;</p>
 </blockquote>
 </div>
-<p>Sacitta-pariyodapanaṃ</p>
+<p>Sacitta-pariyodapanaṁ</p>
 <div class="english">
 <blockquote>
 <p>To purify one’s mind:</p>
 </blockquote>
 </div>
-<p>Etaṃ buddhāna sāsanaṃ</p>
+<p>Etaṁ buddhāna sāsanaṁ</p>
 <div class="english">
 <blockquote>
 <p>These are the teachings of all Buddhas.</p>
 </blockquote>
 </div>
-<p>Khantī paramaṃ tapo tītikkhā</p>
+<p>Khantī paramaṁ tapo tītikkhā</p>
 <div class="english">
 <blockquote>
 <p>Patient endurance is the highest practice,<br />
 burning out defilements;</p>
 </blockquote>
 </div>
-<p>Nibbānaṃ paramaṃ vadanti buddhā</p>
+<p>Nibbānaṁ paramaṁ vadanti buddhā</p>
 <div class="english">
 <blockquote>
 <p>The Buddhas say Nibbāna is supreme.</p>
@@ -229,7 +231,7 @@ burning out defilements;</p>
 <p>Not a renunciant is one who injures others;</p>
 </blockquote>
 </div>
-<p>Samaṇo hoti paraṃ viheṭhayanto</p>
+<p>Samaṇo hoti paraṁ viheṭhayanto</p>
 <div class="english">
 <blockquote>
 <p>Whoever troubles others can’t be called a monk.</p>
@@ -241,19 +243,19 @@ burning out defilements;</p>
 <p>Not to insult and not to injure;</p>
 </blockquote>
 </div>
-<p>Pāṭimokkhe ca saṃvaro</p>
+<p>Pāṭimokkhe ca saṁvaro</p>
 <div class="english">
 <blockquote>
 <p>To live restrained by training rules;</p>
 </blockquote>
 </div>
-<p>Mattaññutā ca bhattasmiṃ</p>
+<p>Mattaññutā ca bhattasmiṁ</p>
 <div class="english">
 <blockquote>
 <p>Knowing one’s measure at the meal;</p>
 </blockquote>
 </div>
-<p>Pantañca sayan’āsanaṃ</p>
+<p>Pantañca sayan’āsanaṁ</p>
 <div class="english">
 <blockquote>
 <p>Retreating to a lonely place;</p>
@@ -265,7 +267,7 @@ burning out defilements;</p>
 <p>Devotion to the higher mind:</p>
 </blockquote>
 </div>
-<p>Etaṃ buddhāna sāsanaṃ</p>
+<p>Etaṁ buddhāna sāsanaṁ</p>
 <div class="english">
 <blockquote>
 <p>These are the teachings of all Buddhas.</p>
@@ -274,13 +276,13 @@ burning out defilements;</p>
 <p><em>Dhp 183-185</em></p>
 <h2 id="sacca-kiriyā-gāthā"><a class="header" href="#sacca-kiriyā-gāthā">Sacca-kiriyā-gāthā<a id="sacca"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ sacca-kiriyā-gāthāyo bhaṇāmase]</p>
+<p>[Handa mayaṁ sacca-kiriyā-gāthāyo bhaṇāmase]</p>
 </blockquote>
-<p>Natthi me saraṇaṃ aññaṃ buddho me saraṇaṃ varaṃ<br />
+<p>Natthi me saraṇaṁ aññaṁ buddho me saraṇaṁ varaṁ<br />
 Etena sacca-vajjena sotthi me hotu sabbadā</p>
-<p>Natthi me saraṇaṃ aññaṃ dhammo me saraṇaṃ varaṃ<br />
+<p>Natthi me saraṇaṁ aññaṁ dhammo me saraṇaṁ varaṁ<br />
 Etena sacca-vajjena sotthi me hotu sabbadā</p>
-<p>Natthi me saraṇaṃ aññaṃ saṅgho me saraṇaṃ varaṃ<br />
+<p>Natthi me saraṇaṁ aññaṁ saṅgho me saraṇaṁ varaṁ<br />
 Etena sacca-vajjena sotthi me hotu sabbadā</p>
 <div class="english">
 <blockquote>
@@ -291,23 +293,23 @@ for me.</p>
 </div>
 <h2 id="sīluddesa-pāṭha"><a class="header" href="#sīluddesa-pāṭha">Sīl’uddesa-pāṭha<a id="sil-uddesa"></a></a></h2>
 <blockquote>
-<p>[Handa mayaṃ sīl’uddesa-pāṭhaṃ bhaṇāmase]</p>
+<p>[Handa mayaṁ sīl’uddesa-pāṭhaṁ bhaṇāmase]</p>
 </blockquote>
-<p>Bhāsitam idaṃ tena bhagavatā jānatā passatā<br />
+<p>Bhāsitam idaṁ tena bhagavatā jānatā passatā<br />
 <span class="vin"></span>arahatā sammā-sambuddhena<br />
 Sampanna-sīlā bhikkhave viharatha<br />
 <span class="vin"></span>sampanna-pāṭimokkhā<br />
-Pāṭimokkha-saṃvara-saṃvutā viharatha<br />
+Pāṭimokkha-saṁvara-saṁvutā viharatha<br />
 <span class="vin"></span>ācāra-gocara-sampannā<br />
 Aṇu-mattesu vajjesu bhaya-dassāvī<br />
 <span class="vin"></span>samādāya sikkhatha sikkhāpadesū’ti</p>
-<p>Tasmā-tih’amhehi sikkhitabbaṃ<br />
+<p>Tasmā-tih’amhehi sikkhitabbaṁ<br />
 Sampanna-sīlā viharissāma sampanna-pāṭimokkhā<br />
-Pāṭimokkha-saṃvara-saṃvutā viharissāma<br />
+Pāṭimokkha-saṁvara-saṁvutā viharissāma<br />
 <span class="vin"></span>ācāra-gocara-sampannā<br />
 Aṇu-mattesu vajjesu bhaya-dassāvī<br />
 <span class="vin"></span>samādāya sikkhissāma sikkhāpadesū’ti<br />
-Evañ hi no sikkhitabbaṃ</p>
+Evañ hi no sikkhitabbaṁ</p>
 <div class="english">
 <blockquote>
 <p>This has been said by the Lord, One-who-knows, One-who-sees, the Arahant, the
@@ -327,9 +329,9 @@ faults.’ Thus indeed we should train ourselves.</p>
 <h2 id="tāyana-gāthā"><a class="header" href="#tāyana-gāthā">Tāyana-gāthā<a id="tayana"></a></a></h2>
 <p><em>The Verses of Tāyana</em></p>
 <blockquote>
-<p>[Handa mayaṃ tāyana-gāthāyo bhaṇāmase]</p>
+<p>[Handa mayaṁ tāyana-gāthāyo bhaṇāmase]</p>
 </blockquote>
-<p>Chinda sotaṃ parakkamma<br />
+<p>Chinda sotaṁ parakkamma<br />
 Kāme panūda brāhmaṇa<br />
 Nappahāya muni kāme<br />
 N’ekattam-upapajjati</p>
@@ -341,10 +343,10 @@ Not letting sensual pleasures go,<br />
 A sage will not reach unity.</p>
 </blockquote>
 </div>
-<p>Kayirā ce kayirāthenaṃ<br />
-Daḷham-enaṃ parakkame<br />
+<p>Kayirā ce kayirāthenaṁ<br />
+Daḷham-enaṁ parakkame<br />
 Sithilo hi paribbājo<br />
-Bhiyyo ākirate rajaṃ</p>
+Bhiyyo ākirate rajaṁ</p>
 <div class="english">
 <blockquote>
 <p>Vigorously, with all one’s strength,<br />
@@ -353,10 +355,10 @@ A lax monastic life stirs up<br />
 The dust of passions all the more.</p>
 </blockquote>
 </div>
-<p>Akataṃ dukkaṭaṃ seyyo<br />
-Pacchā tappati dukkaṭaṃ<br />
-Katañca sukataṃ seyyo<br />
-Yaṃ katvā nānutappati</p>
+<p>Akataṁ dukkaṭaṁ seyyo<br />
+Pacchā tappati dukkaṭaṁ<br />
+Katañca sukataṁ seyyo<br />
+Yaṁ katvā nānutappati</p>
 <div class="english">
 <blockquote>
 <p>Better is not to do bad deeds<br />
@@ -367,7 +369,7 @@ Which having done one won’t regret.</p>
 </div>
 <p>Kuso yathā duggahito<br />
 Hattham-evānukantati<br />
-Sāmaññaṃ dupparāmaṭṭhaṃ<br />
+Sāmaññaṁ dupparāmaṭṭhaṁ<br />
 Nirayāyūpakaḍḍhati</p>
 <div class="english">
 <blockquote>
@@ -377,10 +379,10 @@ So does the monk’s life wrongly led<br />
 Indeed drag one to hellish states.</p>
 </blockquote>
 </div>
-<p>Yaṃ kiñci sithilaṃ kammaṃ<br />
-Saṅkiliṭṭhañca yaṃ vataṃ<br />
-Saṅkassaraṃ brahma-cariyaṃ<br />
-Na taṃ hoti mahapphalan’ti</p>
+<p>Yaṁ kiñci sithilaṁ kammaṁ<br />
+Saṅkiliṭṭhañca yaṁ vataṁ<br />
+Saṅkassaraṁ brahma-cariyaṁ<br />
+Na taṁ hoti mahapphalan’ti</p>
 <div class="english">
 <blockquote>
 <p>Whatever deed that’s slackly done,<br />
@@ -392,14 +394,14 @@ All these will never bear great fruit.</p>
 <p><em>S.I.49f</em></p>
 <h2 id="sāmaṇera-sikkhā"><a class="header" href="#sāmaṇera-sikkhā">Sāmaṇera-sikkhā<a id="samanera"></a></a></h2>
 <p>Anuññāsi kho bhagavā<br />
-Sāmaṇerānaṃ dasa sikkhā-padāni</p>
+Sāmaṇerānaṁ dasa sikkhā-padāni</p>
 <div class="english">
 <blockquote>
 <p>Ten novice training rules<br />
 were established by the Blessed One.</p>
 </blockquote>
 </div>
-<p>Tesu ca sāmaṇerehi sikkhituṃ</p>
+<p>Tesu ca sāmaṇerehi sikkhituṁ</p>
 <div class="english">
 <blockquote>
 <p>They are the things in which a novice should train:</p>
@@ -468,7 +470,7 @@ were established by the Blessed One.</p>
 </div>
 <p><em>Vin.I.83f</em></p>
 <p>Anuññāsi kho Bhagavā<br />
-Dasahi aṅgehi samannāgataṃ sāmaṇeraṃ nāsetuṃ</p>
+Dasahi aṅgehi samannāgataṁ sāmaṇeraṁ nāsetuṁ</p>
 <div class="english">
 <blockquote>
 <p>Ten grounds for a novice to be dismissed<br />
@@ -511,19 +513,19 @@ were established by the Blessed One.</p>
 <p>He is a consumer of intoxicants</p>
 </blockquote>
 </div>
-<p>Buddhassa avaṇṇaṃ bhāsati</p>
+<p>Buddhassa avaṇṇaṁ bhāsati</p>
 <div class="english">
 <blockquote>
 <p>He speaks in dispraise of the Buddha</p>
 </blockquote>
 </div>
-<p>Dhammassa avaṇṇaṃ bhāsati</p>
+<p>Dhammassa avaṇṇaṁ bhāsati</p>
 <div class="english">
 <blockquote>
 <p>He speaks in dispraise of the Dhamma</p>
 </blockquote>
 </div>
-<p>Saṅghassa avaṇṇaṃ bhāsati</p>
+<p>Saṅghassa avaṇṇaṁ bhāsati</p>
 <div class="english">
 <blockquote>
 <p>He speaks in dispraise of the Saṅgha</p>
@@ -542,7 +544,7 @@ were established by the Blessed One.</p>
 </blockquote>
 </div>
 <p>Anuññāsi kho Bhagavā<br />
-Imehi dasahi aṅgehi samannāgataṃ sāmaṇeraṃ nāsetun’ti.</p>
+Imehi dasahi aṅgehi samannāgataṁ sāmaṇeraṁ nāsetun’ti.</p>
 <div class="english">
 <blockquote>
 <p>These are the ten grounds for a novice to be dismissed<br />
@@ -551,7 +553,7 @@ which were established by the Blessed One.</p>
 </div>
 <p><em>Vin.I.85</em></p>
 <p>Anuññāsi kho Bhagavā<br />
-Pañcahi aṅgehi samannāgatassa sāmaṇerassa daṇḍa-kammaṃ kātuṃ</p>
+Pañcahi aṅgehi samannāgatassa sāmaṇerassa daṇḍa-kammaṁ kātuṁ</p>
 <div class="english">
 <blockquote>
 <p>Five grounds for a novice to be punished<br />
@@ -564,19 +566,19 @@ were established by the Blessed One.</p>
 <p>What are these five?</p>
 </blockquote>
 </div>
-<p>Bhikkhūnaṃ alābhāya parisakkati</p>
+<p>Bhikkhūnaṁ alābhāya parisakkati</p>
 <div class="english">
 <blockquote>
 <p>He strives for the loss of the Bhikkhus</p>
 </blockquote>
 </div>
-<p>Bhikkhūnaṃ anatthāya parisakkati</p>
+<p>Bhikkhūnaṁ anatthāya parisakkati</p>
 <div class="english">
 <blockquote>
 <p>He strives for the non-benefit of the Bhikkhus</p>
 </blockquote>
 </div>
-<p>Bhikkhūnaṃ anāvāsāya parisakkati</p>
+<p>Bhikkhūnaṁ anāvāsāya parisakkati</p>
 <div class="english">
 <blockquote>
 <p>He strives for the non-residence of the Bhikkhus</p>
@@ -596,7 +598,7 @@ were established by the Blessed One.</p>
 </div>
 <p>Anuññāsi kho Bhagavā<br />
 Imehi pañcahi aṅgehi samannāgatassa<br />
-sāmaṇerassa daṇḍa-kammaṃ kātun’ti</p>
+sāmaṇerassa daṇḍa-kammaṁ kātun’ti</p>
 <div class="english">
 <blockquote>
 <p>These are the five grounds for a novice to be punished<br />
