--- a/first-lines.html
+++ b/first-lines.html
@@ -91,7 +91,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><a href="titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="first-lines.html" class="active">List of First Lines</a></li><li class="chapter-item expanded "><a href="essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="namo-tassa.html"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -175,92 +177,92 @@
                         <h1 id="list-of-first-lines"><a class="header" href="#list-of-first-lines">List of First Lines</a></h1>
 <ul>
 <li><a href="chants/anumodana.html#adasi-me">Adāsi me akāsi me</a></li>
-<li><a href="chants/anumodana.html#aggappasada">Aggato ve pasannānaṃ</a></li>
+<li><a href="chants/anumodana.html#aggappasada">Aggato ve pasannānaṁ</a></li>
 <li><a href="chants/evening-chanting.html#b-sati-eng">A good word of the Blessed One’s reputation has spread as follows</a></li>
-<li><a href="chants/reflections.html#mettapharana">Ahaṃ sukhito homi niddukkho homi, avero homi, abyāpajjho homi, anīgho homi</a></li>
-<li><a href="chants/reflections.html#recollection-after">Ajja mayā apaccavekkhitvā yaṃ cīvaraṃ paribhuttaṃ, taṃ yāvadeva sītassa</a></li>
+<li><a href="chants/reflections.html#mettapharana">Ahaṁ sukhito homi niddukkho homi, avero homi, abyāpajjho homi, anīgho homi</a></li>
+<li><a href="chants/reflections.html#recollection-after">Ajja mayā apaccavekkhitvā yaṁ cīvaraṁ paribhuttaṁ, taṁ yāvadeva sītassa</a></li>
 <li><a href="chants/sri-lanka.html#merit-to-devas">Ākāsatthā ca bhummatthā</a></li>
 <li><a href="chants/suttas.html#anapanassati">Ānāpānassati bhikkhave bhāvitā bahulīkatā</a></li>
-<li><a href="chants/parittas.html#pathama-buddha">Aneka-jāti-saṃsāraṃ</a></li>
+<li><a href="chants/parittas.html#pathama-buddha">Aneka-jāti-saṁsāraṁ</a></li>
 <li><a href="chants/funeral-chants.html#pamsukula">Aniccā vata saṅkhārā</a></li>
 <li><a href="chants/reflections.html#friends">Aññadatthu haro mitto</a></li>
 <li><a href="chants/patimokkha-chants.html#samanera">Anuññāsi kho bhagavā</a></li>
-<li><a href="chants/suttas.html#dhammacakkappavattana">Anuttaraṃ abhisambodhiṃ sambujjhitvā tathāgato</a></li>
+<li><a href="chants/suttas.html#dhammacakkappavattana">Anuttaraṁ abhisambodhiṁ sambujjhitvā tathāgato</a></li>
 <li><a href="chants/parittas.html#appamano-buddho">Appamāṇo buddho</a></li>
 <li><a href="chants/parittas.html#atanatiya">Appasannehi nāthassa sāsane sādhusammate</a></li>
 <li><a href="chants/parittas.html#aranne">Araññe rukkha-mūle vā</a></li>
-<li><a href="chants/parittas.html#bhadd-eka-ratta">Atītaṃ nānvāgameyya</a></li>
-<li><a href="chants/reflections.html#unconditioned">Atthi bhikkhave ajātaṃ abhūtaṃ akataṃ asaṅkhataṃ</a></li>
+<li><a href="chants/parittas.html#bhadd-eka-ratta">Atītaṁ nānvāgameyya</a></li>
+<li><a href="chants/reflections.html#unconditioned">Atthi bhikkhave ajātaṁ abhūtaṁ akataṁ asaṅkhataṁ</a></li>
 <li><a href="chants/parittas.html#atthi-loke">Atthi loke sīla-guṇo</a></li>
-<li><a href="chants/sri-lanka.html#bhavana">Attūpamāya sabbesaṃ</a></li>
-<li><a href="chants/reflections.html#thirty-two">Ayaṃ kho me kāyo uddhaṃ pādatalā adho kesamatthakā</a></li>
+<li><a href="chants/sri-lanka.html#bhavana">Attūpamāya sabbesaṁ</a></li>
+<li><a href="chants/reflections.html#thirty-two">Ayaṁ kho me kāyo uddhaṁ pādatalā adho kesamatthakā</a></li>
 <li><a href="chants/anumodana.html#bhojana">Āyu-do bala-do dhīro</a></li>
-<li><a href="chants/parittas.html#bahum">Bāhuṃ sahassam-abhinimmita sāvudhan-taṃ</a></li>
-<li><a href="chants/parittas.html#khemakhema">Bahuṃ ve saraṇaṃ yanti</a></li>
+<li><a href="chants/parittas.html#bahum">Bāhuṁ sahassam-abhinimmita sāvudhan-taṁ</a></li>
+<li><a href="chants/parittas.html#khemakhema">Bahuṁ ve saraṇaṁ yanti</a></li>
 <li><a href="chants/parittas.html#bhara-sutta">Bhārā have pañcakkhandhā</a></li>
-<li><a href="chants/patimokkha-chants.html#sil-uddesa">Bhāsitam idaṃ tena bhagavatā jānatā passatā</a></li>
-<li><a href="chants/parittas.html#bhavatu">Bhavatu sabba-maṅgalaṃ rakkhantu sabba-devatā</a></li>
-<li><a href="chants/suttas.html#bhummanam">Bhummānaṃ devānaṃ saddaṃ sutvā, cātummahārājikā devā</a></li>
+<li><a href="chants/patimokkha-chants.html#sil-uddesa">Bhāsitam idaṁ tena bhagavatā jānatā passatā</a></li>
+<li><a href="chants/parittas.html#bhavatu">Bhavatu sabba-maṅgalaṁ rakkhantu sabba-devatā</a></li>
+<li><a href="chants/suttas.html#bhummanam">Bhummānaṁ devānaṁ saddaṁ sutvā, cātummahārājikā devā</a></li>
 <li><a href="chants/anumodana.html#adiya-sutta">Bhuttā bhogā bhaṭā bhaccā</a></li>
 <li><a href="chants/parittas.html#bojjhango">Bojjhaṅgo sati-saṅkhāto</a></li>
 <li><a href="chants/evening-chanting.html#s-bhi-eng">Born of the Dhamma, that Saṅgha which has practised well</a></li>
-<li><a href="chants/parittas.html#buddham-saranam">Buddhaṃ saraṇaṃ gacchāmi</a></li>
+<li><a href="chants/parittas.html#buddham-saranam">Buddhaṁ saraṇaṁ gacchāmi</a></li>
 <li><a href="chants/reflections.html#guardian">Buddhānussati mettā ca</a></li>
 <li><a href="chants/morning-chanting.html#buddho-susuddho">Buddho susuddho karuṇā-mahaṇṇavo</a></li>
 <li><a href="chants/evening-chanting.html#b-bhi-pli">Buddh’vārahanta-varatādiguṇābhiyutto</a></li>
 <li><a href="chants/funeral-chants.html#puggalapannatti">Cha paññattiyo khandhapaññatti, āyatanapaññatti, dhātupaññatti, saccapaññatti</a></li>
-<li><a href="chants/patimokkha-chants.html#tayana">Chinda sotaṃ parakkamma</a></li>
+<li><a href="chants/patimokkha-chants.html#tayana">Chinda sotaṁ parakkamma</a></li>
 <li><a href="chants/anumodana.html#sangaha">Dānañ-ca peyya-vajjañ-ca</a></li>
-<li><a href="chants/reflections.html#dasa-ime-bhikkhave">Dasa ime bhikkhave dhammā pabbajitena abhiṇhaṃ paccavekkhitabbā, katame dasa</a></li>
+<li><a href="chants/reflections.html#dasa-ime-bhikkhave">Dasa ime bhikkhave dhammā pabbajitena abhiṇhaṁ paccavekkhitabbā, katame dasa</a></li>
 <li><a href="chants/sri-lanka.html#the-world">Devo vassatu kālena</a></li>
 <li><a href="chants/parittas.html#dukkhappatta">Dukkhappattā ca niddukkhā</a></li>
-<li><a href="chants/reflections.html#striving">Evaṃ svākkhāto bhikkhave mayā dhammo</a></li>
+<li><a href="chants/reflections.html#striving">Evaṁ svākkhāto bhikkhave mayā dhammo</a></li>
 <li><a href="chants/sri-lanka.html#incense">Gandha-sambhāra-yuttena</a></li>
 <li><a href="chants/sri-lanka.html#lights">Ghana-sārappadittena</a></li>
 <li><a href="chants/parittas.html#pacchima-ovada">Handa dāni bhikkhave āmantayāmi vo</a></li>
 <li><a href="chants/funeral-chants.html#patthana">Hetu-paccayo, ārammaṇa-paccayo</a></li>
-<li><a href="chants/sri-lanka.html#merits-to-departed">Idaṃ te/vo/no/me ñātīnaṃ hotu</a></li>
-<li><a href="chants/sri-lanka.html#pattanumodana">Idaṃ te/vo/no/me ñātīnaṃ hotu</a></li>
+<li><a href="chants/sri-lanka.html#merits-to-departed">Idaṁ te/vo/no/me ñātīnaṁ hotu</a></li>
+<li><a href="chants/sri-lanka.html#pattanumodana">Idaṁ te/vo/no/me ñātīnaṁ hotu</a></li>
 <li><a href="chants/reflections.html#imina-punna">Iminā puññakammena upajjhāyā guṇuttarā</a></li>
-<li><a href="chants/parittas.html#iti-pi-so">Iti pi so bhagavā arahaṃ sammā-sambuddho</a></li>
+<li><a href="chants/parittas.html#iti-pi-so">Iti pi so bhagavā arahaṁ sammā-sambuddho</a></li>
 <li><a href="chants/evening-chanting.html#d-bhi-eng">It is excellent because it is well expounded</a></li>
 <li><a href="chants/reflections.html#suffusion">I will abide pervading one quarter</a></li>
-<li><a href="chants/reflections.html#jara-dhammomhi">Jarā-dhammomhi jaraṃ anatīto</a></li>
+<li><a href="chants/reflections.html#jara-dhammomhi">Jarā-dhammomhi jaraṁ anatīto</a></li>
 <li><a href="chants/parittas.html#jayanto">Jayanto bodhiyā mūle</a></li>
 <li><a href="chants/anumodana.html#kala-dana">Kāle dadanti sapaññā</a></li>
 <li><a href="chants/parittas.html#karaniyam-attha">Karaṇīyam-attha-kusalena</a></li>
 <li><a href="chants/funeral-chants.html#matika">Kusalā dhammā</a></li>
 <li><a href="chants/parittas.html#maha-karuniko">Mahā-kāruṇiko nātho</a></li>
 <li><a href="chants/reflections.html#universal">May I abide in well-being,</a></li>
-<li><a href="chants/parittas.html#sabba-lokasmim">Mettañ-ca sabba-lokasmiṃ</a></li>
-<li><a href="chants/reflections.html#caturappamanna">Mettā-sahagatena cetasā ekaṃ disaṃ pharitvā viharati</a></li>
-<li><a href="chants/parittas.html#nakkhattayakkha">Nakkhatta-yakkha-bhūtānaṃ</a></li>
+<li><a href="chants/parittas.html#sabba-lokasmim">Mettañ-ca sabba-lokasmiṁ</a></li>
+<li><a href="chants/reflections.html#caturappamanna">Mettā-sahagatena cetasā ekaṁ disaṁ pharitvā viharati</a></li>
+<li><a href="chants/parittas.html#nakkhattayakkha">Nakkhatta-yakkha-bhūtānaṁ</a></li>
 <li><a href="chants/parittas.html#namo-arahato">Namo arahato sammā</a></li>
-<li><a href="chants/parittas.html#natthi-me">Natthi me saraṇaṃ aññaṃ buddho me saraṇaṃ varaṃ</a></li>
+<li><a href="chants/parittas.html#natthi-me">Natthi me saraṇaṁ aññaṁ buddho me saraṇaṁ varaṁ</a></li>
 <li><a href="chants/funeral-chants.html#vipassana-bhumi">Pañcakkhandhā</a></li>
 <li><a href="chants/reflections.html#pasanna-hontu">Pasannā hontu sabbe pi</a></li>
-<li><a href="chants/reflections.html#patisankha-yoniso">Paṭisaṅkhā yoniso cīvaraṃ paṭisevāmi</a></li>
+<li><a href="chants/reflections.html#patisankha-yoniso">Paṭisaṅkhā yoniso cīvaraṁ paṭisevāmi</a></li>
 <li><a href="chants/funeral-chants.html#kathavatthu">Puggalo upalabbhati saccikaṭṭha-paramatthenā’ti</a></li>
 <li><a href="chants/reflections.html#sabba-patti">Puññass’idāni katassa</a></li>
 <li><a href="chants/anumodana.html#ratanattaya">Ratanattay’ānubhāvena</a></li>
 <li><a href="chants/parittas.html#sa-attha-laddha">Sā attha-laddhā sukhitā</a></li>
 <li><a href="chants/anumodana.html#culla-mangala">Sabba-buddh’ānubhāvena</a></li>
-<li><a href="chants/patimokkha-chants.html#ovada">Sabba-pāpassa akaraṇaṃ</a></li>
+<li><a href="chants/patimokkha-chants.html#ovada">Sabba-pāpassa akaraṇaṁ</a></li>
 <li><a href="chants/anumodana.html#sabba-roga">Sabba-roga-vinimutto</a></li>
 <li><a href="chants/reflections.html#impermanence">Sabbe saṅkhārā aniccā</a></li>
 <li><a href="chants/reflections.html#sabbe-satta">Sabbe sattā sadā hontu</a></li>
 <li><a href="chants/evening-chanting.html#s-bhi-pli">Saddhammajo supaṭipatti-guṇādiyutto</a></li>
-<li><a href="chants/parittas.html#sakkatva">Sakkatvā buddharatanaṃ</a></li>
+<li><a href="chants/parittas.html#sakkatva">Sakkatvā buddharatanaṁ</a></li>
 <li><a href="chants/parittas.html#sambuddhe">Sambuddhe aṭṭhavīsañca</a></li>
 <li><a href="chants/funeral-chants.html#dhatukatha">Saṅgaho asaṅgaho</a></li>
 <li><a href="chants/parittas.html#respect">Satthu-garu dhamma-garu</a></li>
 <li><a href="chants/anumodana.html#maha-mangala">Siri-dhiti-mati-tejo-jayasiddhi-mahiddhi-mahāguṇā-parimita-puññādhikarassa</a></li>
-<li><a href="chants/anumodana.html#vihara-dana">Sītaṃ uṇhaṃ paṭihanti</a></li>
+<li><a href="chants/anumodana.html#vihara-dana">Sītaṁ uṇhaṁ paṭihanti</a></li>
 <li><a href="chants/parittas.html#so-attha-laddho">So attha-laddho sukhito</a></li>
 <li><a href="chants/evening-chanting.html#s-sati-pli">Supaṭipanno bhagavato sāvakasaṅgho</a></li>
 <li><a href="chants/evening-chanting.html#d-bhi-pali">Svākkhātat’ādiguṇa-yoga-vasena seyyo</a></li>
 <li><a href="chants/evening-chanting.html#d-sati-pli">Svākkhāto bhagavatā dhammo</a></li>
-<li><a href="chants/evening-chanting.html#b-sati-pli">Taṃ kho pana bhagavantaṃ evaṃ kalyāṇo kittisaddo abbhuggato</a></li>
+<li><a href="chants/evening-chanting.html#b-sati-pli">Taṁ kho pana bhagavantaṁ evaṁ kalyāṇo kittisaddo abbhuggato</a></li>
 <li><a href="chants/parittas.html#te-attha-laddha">Te attha-laddhā sukhitā</a></li>
 <li><a href="chants/morning-chanting.html#salutation-english">The Buddha, absolutely pure, with ocean-like compassion</a></li>
 <li><a href="chants/evening-chanting.html#b-bhi-eng">The Buddha, the truly worthy one, endowed with</a></li>
@@ -273,35 +275,35 @@
 <li><a href="chants/morning-chanting.html#dedication">To the Blessed One, the Lord, who fully attained perfect enlightenment</a></li>
 <li><a href="chants/parittas.html#udetayan-cakkhuma">Udet’ayañ-cakkhumā eka-rājā</a></li>
 <li><a href="chants/parittas.html#vadhissamenanti">Vadhissamenanti parāmasanto</a></li>
-<li><a href="chants/sri-lanka.html#three-main-objects">Vandāmi cetiyaṃ sabbaṃ</a></li>
-<li><a href="chants/sri-lanka.html#flowers">Vaṇṇa-gandha-guṇopetaṃ</a></li>
-<li><a href="chants/suttas.html#aditta-pariyaya">Veneyyadamanopāye sabbaso pāramiṃ gato</a></li>
+<li><a href="chants/sri-lanka.html#three-main-objects">Vandāmi cetiyaṁ sabbaṁ</a></li>
+<li><a href="chants/sri-lanka.html#flowers">Vaṇṇa-gandha-guṇopetaṁ</a></li>
+<li><a href="chants/suttas.html#aditta-pariyaya">Veneyyadamanopāye sabbaso pāramiṁ gato</a></li>
 <li><a href="chants/parittas.html#vipassissa">Vipassissa nam’atthu</a></li>
 <li><a href="chants/parittas.html#invitation">Vipatti-paṭibāhāya sabba-sampatti-siddhiyā</a></li>
-<li><a href="chants/parittas.html#virupakkhehi">Virūpakkhehi me mettaṃ</a></li>
+<li><a href="chants/parittas.html#virupakkhehi">Virūpakkhehi me mettaṁ</a></li>
 <li><a href="chants/reflections.html#dedication">Yā devatā santi vihāra-vāsinī</a></li>
-<li><a href="chants/reflections.html#yan-dani">Yan-dāni me kataṃ puññaṃ</a></li>
-<li><a href="chants/parittas.html#yan-dunnimittam">Yan-dunnimittaṃ avamaṅgalañ-ca</a></li>
+<li><a href="chants/reflections.html#yan-dani">Yan-dāni me kataṁ puññaṁ</a></li>
+<li><a href="chants/parittas.html#yan-dunnimittam">Yan-dunnimittaṁ avamaṅgalañ-ca</a></li>
 <li><a href="chants/parittas.html#ratana-sutta">Yānīdha bhūtāni samāgatāni</a></li>
-<li><a href="chants/reflections.html#ti-loka">Yaṅ kiñci kusalaṃ kammaṃ</a></li>
-<li><a href="chants/parittas.html#yankinci-ratanam">Yaṅkiñci ratanaṃ loke</a></li>
-<li><a href="chants/parittas.html#yankinci-vittam">Yaṅkiñci vittaṃ idha vā huraṃ vā</a></li>
-<li><a href="chants/suttas.html#anatta-lakkhana">Yantaṃ sattehi dukkhena ñeyyaṃ anattalakkhaṇaṃ</a></li>
-<li><a href="chants/anumodana.html#devat-adissa">Yasmiṃ padese kappeti</a></li>
+<li><a href="chants/reflections.html#ti-loka">Yaṅ kiñci kusalaṁ kammaṁ</a></li>
+<li><a href="chants/parittas.html#yankinci-ratanam">Yaṅkiñci ratanaṁ loke</a></li>
+<li><a href="chants/parittas.html#yankinci-vittam">Yaṅkiñci vittaṁ idha vā huraṁ vā</a></li>
+<li><a href="chants/suttas.html#anatta-lakkhana">Yantaṁ sattehi dukkhena ñeyyaṁ anattalakkhaṇaṁ</a></li>
+<li><a href="chants/anumodana.html#devat-adissa">Yasmiṁ padese kappeti</a></li>
 <li><a href="chants/sri-lanka.html#bodhi-tree">Yassa mūle nissino va</a></li>
 <li><a href="chants/anumodana.html#ariya-dhana">Yassa saddhā tathāgate</a></li>
-<li><a href="chants/reflections.html#off-putting">Yathā paccayaṃ pavattamānaṃ dhātu-mattam-ev’etaṃ</a></li>
+<li><a href="chants/reflections.html#off-putting">Yathā paccayaṁ pavattamānaṁ dhātu-mattam-ev’etaṁ</a></li>
 <li><a href="chants/parittas.html#pabbatopama">Yathā pi selā vipulā</a></li>
-<li><a href="chants/anumodana.html#yatha">Yathā vāri-vahā pūrā paripūrenti sāgaraṃ</a></li>
-<li><a href="chants/parittas.html#yato-ham-bhagini">Yato’haṃ bhagini ariyāya jātiyā jāto</a></li>
+<li><a href="chants/anumodana.html#yatha">Yathā vāri-vahā pūrā paripūrenti sāgaraṁ</a></li>
+<li><a href="chants/parittas.html#yato-ham-bhagini">Yato’haṁ bhagini ariyāya jātiyā jāto</a></li>
 <li><a href="chants/parittas.html#dhamma-garav-adi">Ye ca atītā sambuddhā</a></li>
 <li><a href="chants/parittas.html#hetuppabhava">Ye dhammā hetuppabhavā</a></li>
 <li><a href="chants/funeral-chants.html#yamaka">Ye keci kusalā dhammā, sabbe te kusalamūlā</a></li>
 <li><a href="chants/parittas.html#yo-cakkhuma">Yo cakkhumā moha-malāpakaṭṭho</a></li>
-<li><a href="chants/morning-chanting.html#yo-so-bhagava">Yo so bhagavā arahaṃ sammāsambuddho</a></li>
+<li><a href="chants/morning-chanting.html#yo-so-bhagava">Yo so bhagavā arahaṁ sammāsambuddho</a></li>
 <li><a href="chants/morning-chanting.html#sangha-pali">Yo so supaṭipanno bhagavato sāvakasaṅgho</a></li>
 <li><a href="chants/morning-chanting.html#dhamma-pali">Yo so svākkhāto bhagavatā dhammo</a></li>
-<li><a href="chants/morning-chanting.html#buddha-pali">Yo so tathāgato arahaṃ sammāsambuddho</a></li>
+<li><a href="chants/morning-chanting.html#buddha-pali">Yo so tathāgato arahaṁ sammāsambuddho</a></li>
 </ul>
 
                     </main>
