--- a/pali-phonetics-and-pronunciation.html
+++ b/pali-phonetics-and-pronunciation.html
@@ -91,7 +91,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><a href="titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="first-lines.html">List of First Lines</a></li><li class="chapter-item expanded "><a href="essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="pali-phonetics-and-pronunciation.html" class="active"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="namo-tassa.html"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -191,7 +193,7 @@ used here is pronounced as in English, with the following clarifications:</p>
 consonants. They are then pronounced as in ‘g<strong>e</strong>t’ and ‘<strong>o</strong>x’, respectively.</p>
 <h2 id="consonants"><a class="header" href="#consonants">Consonants</a></h2>
 <p><strong>c</strong> as in an<strong>c</strong>ient (like <strong>ch</strong> but unaspirated)</p>
-<p><strong>ṃ, ṅ</strong> as <strong>ng</strong> in sa<strong>ng</strong></p>
+<p><strong>ṁ, ṅ</strong> as <strong>ng</strong> in sa<strong>ng</strong></p>
 <p><strong>ñ</strong> as <strong>ny</strong> in ca<strong>ny</strong>on</p>
 <p><strong>v</strong> rather softer than the English <strong>v</strong>; near <strong>w</strong></p>
 <h3 id="aspirated-consonants"><a class="header" href="#aspirated-consonants">Aspirated consonants</a></h3>
@@ -227,8 +229,8 @@ gives the chanting its particular rhythm.</p>
 <p>They are always enunciated separately, e.g. <strong>dd</strong> in ‘uddeso’ as in
 ‘mad dog’, or <strong>gg</strong> in ‘maggo’ as in ‘big gun’.</p>
 <p><strong>2.</strong> <strong>Aspirated consonants</strong> like <strong>bh, dh</strong> etc. count as single
-consonant and don’t get divided (Therefore <strong>am·hā·kaṃ</strong>, but
-<strong>sa·dham·maṃ</strong>, not <strong>sad·ham·maṃ</strong> or, another example: <strong>Bud·dho</strong>
+consonant and don’t get divided (Therefore <strong>am·hā·kaṁ</strong>, but
+<strong>sa·dham·maṁ</strong>, not <strong>sad·ham·maṁ</strong> or, another example: <strong>Bud·dho</strong>
 and not <strong>Bu·ddho</strong>).</p>
 <p>Precise pronunciation and correct separation of the syllables is
 especially important when someone is interested in learning Pāli and to
