--- a/vinaya/rains-and-kathina.html
+++ b/vinaya/rains-and-kathina.html
@@ -91,7 +91,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="chapter-item expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="../vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="../vinaya/rains-and-kathina.html" class="active"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="../vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="../quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="../namo-tassa.html"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -227,13 +229,13 @@ together.</p>
 <p>The leader picks up and holds the tray, still in a bowed posture.</p>
 <blockquote>
 <p><em>Leader:</em> ‘Ā–’<br />
-<em>All:</em> ‘<em>Āyasmante</em> pamādena, dvārattayena kataṃ, sabbaṃ aparādhaṃ khamatu <em>no</em> bhante.’</p>
+<em>All:</em> ‘<em>Āyasmante</em> pamādena, dvārattayena kataṁ, sabbaṁ aparādhaṁ khamatu <em>no</em> bhante.’</p>
 </blockquote>
 <p>(<em>Forgive us, ven. sir, for all wrong-doing done carelessly to the ven. one by way of the three doors.</em>)</p>
 <p>The leader offers the tray to the Ācariya.</p>
 <p>The Ācariya:</p>
 <blockquote>
-<p>‘Ahaṃ khamāmi, <em>tumhehi pi</em> me khamitabbaṃ.’<br />
+<p>‘Ahaṁ khamāmi, <em>tumhehi pi</em> me khamitabbaṁ.’<br />
 <em>(I forgive you. You should also forgive me.)</em></p>
 </blockquote>
 <p>The group responds together:</p>
@@ -243,18 +245,18 @@ together.</p>
 </blockquote>
 <p>The group stays in a bowed posture while the Ācariya gives his blessing:</p>
 <blockquote>
-<p>‘Evaṃ hotu evaṃ hotu,<br />
+<p>‘Evaṁ hotu evaṁ hotu,<br />
 Yo ca pubbe pamajjitvā pacchā so nappamajjati,<br />
-So’maṃ lokaṃ pabhāseti abbhā mutto va candimā.’</p>
+So’maṁ lokaṁ pabhāseti abbhā mutto va candimā.’</p>
 </blockquote>
 <blockquote>
-<p>‘Yassa pāpaṃ kataṃ kammaṃ kusalena pithīyati,<br />
-So’maṃ lokaṃ pabhāseti abbhā mutto va candimā.’</p>
+<p>‘Yassa pāpaṁ kataṁ kammaṁ kusalena pithīyati,<br />
+So’maṁ lokaṁ pabhāseti abbhā mutto va candimā.’</p>
 </blockquote>
 <blockquote>
-<p>‘Abhivādana sīlissa niccaṃ vuḍḍhāpacāyino,<br />
+<p>‘Abhivādana sīlissa niccaṁ vuḍḍhāpacāyino,<br />
 Cattāro dhammā vaḍḍhanti:<br />
-Āyu vaṇṇo sukhaṃ balaṃ.’</p>
+Āyu vaṇṇo sukhaṁ balaṁ.’</p>
 </blockquote>
 <blockquote>
 <p><em>Dhp 172, 173, 109</em></p>
@@ -278,14 +280,14 @@ moons, it begins after the second full moon. During this time bhikkhus must live
 in a dwelling with a lockable door.</p>
 <h3 id="entering-the-rains-thai-tradition"><a class="header" href="#entering-the-rains-thai-tradition">Entering the Rains (Thai tradition)<a id="entering-rains"></a></a></h3>
 <p>The boundaries are specified, then all resident bhikkhus:</p>
-<p>‘Imasmiṃ āvāse imaṃ te-māsaṃ vassaṃ upema.’ (×3)<br />
+<p>‘Imasmiṁ āvāse imaṁ te-māsaṁ vassaṁ upema.’ (×3)<br />
 ‘<em>We enter the Rains in this monastery for three months.</em>’</p>
 <p>If one bhikkhu at a time: ‘upema’ → ‘upemi’</p>
 <p>Alternatively:</p>
-<p>‘Imasmiṃ vihāre imaṃ te-māsaṃ vassaṃ upemi.’ (×3)<br />
+<p>‘Imasmiṁ vihāre imaṁ te-māsaṁ vassaṁ upemi.’ (×3)<br />
 ‘<em>I enter the Rains in this dwelling for three months.</em>’</p>
 <p>Alternatively:</p>
-<p>‘Idha vassaṃ upemi.’ (×3)<br />
+<p>‘Idha vassaṁ upemi.’ (×3)<br />
 ‘<em>I enter the Rains here.</em>’</p>
 <p><em>Sp.V.1067</em></p>
 <h3 id="sattāha-karaṇīya-seven-day-leave"><a class="header" href="#sattāha-karaṇīya-seven-day-leave">Sattāha-karaṇīya (Seven-day leave)<a id="seven-day"></a></a></h3>
@@ -293,7 +295,7 @@ in a dwelling with a lockable door.</p>
 bhikkhu in danger of disrobing, aid another monastery, uphold the faith of lay
 supporters, etc.</p>
 <p>One may take leave using one’s own language, or the Pali:</p>
-<p>‘Sattāha-karaṇīyaṃ kiccaṃ me-v-atthi tasmā mayā gantabbaṃ, imasmiṃ
+<p>‘Sattāha-karaṇīyaṁ kiccaṁ me-v-atthi tasmā mayā gantabbaṁ, imasmiṁ
 sattāh’abbhantare nivattissāmi.’</p>
 <p>‘<em>I have an obligation which must be fulfilled within seven days. Therefore I
 have to go. I shall return within seven days.</em>’</p>
@@ -309,8 +311,8 @@ and ‘substitute an invitation to a meal’.</p>
 <blockquote>
 <p>‘Suṇātu me <em>bhante</em> saṅgho.<br />
 Ajja pavāraṇā <em>paṇṇarasī</em>.<br />
-Yadi saṅghassa pattakallaṃ,<br />
-Saṅgho <em>te-vācikaṃ</em> pavāreyya.’</p>
+Yadi saṅghassa pattakallaṁ,<br />
+Saṅgho <em>te-vācikaṁ</em> pavāreyya.’</p>
 </blockquote>
 <p>‘<em>Ven. sirs, may the Community listen to me. Today is the Pavāraṇā on the
 fifteenth (day of the fortnight). If the Community is ready, the Community
@@ -321,34 +323,34 @@ should invite with three statements.</em>’</p>
 <p>If the announcing bhikkhu is the most senior:<br />
 ‘bhante’ → ‘āvuso’</p>
 <p>If each bhikkhu is to state his invitation twice:<br />
-‘te-vācikaṃ’ → ‘dve-vācikaṃ’</p>
+‘te-vācikaṁ’ → ‘dve-vācikaṁ’</p>
 <p>If each bhikkhu is to state his invitation once:<br />
-‘te-vācikaṃ’ → ‘eka-vācikaṃ’</p>
+‘te-vācikaṁ’ → ‘eka-vācikaṁ’</p>
 <p>If bhikkhus of equal rains are to invite in unison:</p>
-<p>‘Saṅgho te-vācikaṃ pavāreyya’ → ‘Saṅgho samāna-vassikaṃ pavāreyya’</p>
+<p>‘Saṅgho te-vācikaṁ pavāreyya’ → ‘Saṅgho samāna-vassikaṁ pavāreyya’</p>
 <p>‘<em>The Community should invite in the manner of equal Rains.</em>’</p>
 <p>After the <em>ñatti</em>, if each bhikkhu is to invite ‘three times’, then, in
 order of Rains:</p>
 <blockquote>
-<p>‘<em>Saṅghaṃ bhante</em> pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā, vadantu
-maṃ āyasmanto anukampaṃ upādāya. Passanto paṭikkarissāmi.</p>
-<p>Dutiyam-pi bhante saṅghaṃ pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā,
-vadantu maṃ āyasmanto anukampaṃ upādāya. Passanto paṭikkarissāmi.</p>
-<p>Tatiyam-pi bhante saṅghaṃ pavāremi Diṭṭhena vā sutena vā parisaṅkāya vā, vadantu
-maṃ āyasmanto anukampaṃ upādāya. Passanto paṭikkarissāmi.’</p>
+<p>‘<em>Saṅghaṁ bhante</em> pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā, vadantu
+maṁ āyasmanto anukampaṁ upādāya. Passanto paṭikkarissāmi.</p>
+<p>Dutiyam-pi bhante saṅghaṁ pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā,
+vadantu maṁ āyasmanto anukampaṁ upādāya. Passanto paṭikkarissāmi.</p>
+<p>Tatiyam-pi bhante saṅghaṁ pavāremi Diṭṭhena vā sutena vā parisaṅkāya vā, vadantu
+maṁ āyasmanto anukampaṁ upādāya. Passanto paṭikkarissāmi.’</p>
 </blockquote>
 <p>‘<em>Ven. sirs, I invite admonition from the Sangha. According to what has been
 seen, heard or suspected, may the ven. ones instruct me out of compassion.
 Seeing it, I shall make amends. For a second time… For a third time….</em>’</p>
 <p>For the most senior bhikkhu:</p>
-<p>‘Saṅghaṃ bhante’ → ‘Saṅghaṃ āvuso’<br />
+<p>‘Saṅghaṁ bhante’ → ‘Saṅghaṁ āvuso’<br />
 ‘Dutiyam-pi bhante’ → ‘Dutiyam-pi āvuso’<br />
 ‘Tatiyam-pi bhante’ → ‘Tatiyam-pi āvuso’</p>
 <h3 id="for-four-or-three-bhikkhus"><a class="header" href="#for-four-or-three-bhikkhus">For four or three bhikkhus<a id="four-or-three"></a></a></h3>
 <p>Preliminary duties, then <em>ñatti</em>:</p>
 <blockquote>
-<p>‘Suṇantu me <em>āyasmanto</em>, ajja pavāraṇā paṇṇarasī, yad’āyasmantānaṃ
-pattakallaṃ, mayaṃ aññamaññaṃ pavāreyyāma.’</p>
+<p>‘Suṇantu me <em>āyasmanto</em>, ajja pavāraṇā paṇṇarasī, yad’āyasmantānaṁ
+pattakallaṁ, mayaṁ aññamaññaṁ pavāreyyāma.’</p>
 </blockquote>
 <p>‘<em>Sirs, may you listen to me. Today is the pavāraṇā on the 15th (day of the
 fortnight). If there is complete preparedness of the ven. ones, we should invite
@@ -358,12 +360,12 @@ one another.</em>’</p>
 ‘āyasmanto’ → ‘āyasmantā’</p>
 <p>Then each bhikkhu in order of Rains:</p>
 <blockquote>
-<p>‘Ahaṃ bhante āyasmante pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā, vadantu
-maṃ āyasmanto anukampaṃ upādāya. Passanto paṭikkarissāmi.</p>
+<p>‘Ahaṁ bhante āyasmante pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā, vadantu
+maṁ āyasmanto anukampaṁ upādāya. Passanto paṭikkarissāmi.</p>
 <p>Dutiyam-pi bhante āyasmante pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā,
-vadantu maṃ āyasmanto anukampaṃ upādāya. Passanto paṭikkarissāmi.</p>
+vadantu maṁ āyasmanto anukampaṁ upādāya. Passanto paṭikkarissāmi.</p>
 <p>Tatiyam-pi bhante āyasmante pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā,
-vadantu maṃ āyasmanto anukampaṃ upādāya. Passanto paṭikkarissāmi.’</p>
+vadantu maṁ āyasmanto anukampaṁ upādāya. Passanto paṭikkarissāmi.’</p>
 </blockquote>
 <p>For the most senior bhikkhu:<br />
 ‘bhante’ → ‘āvuso’</p>
@@ -372,12 +374,12 @@ vadantu maṃ āyasmanto anukampaṃ upādāya. Passanto paṭikkarissāmi.’</
 <h3 id="for-two-bhikkhus"><a class="header" href="#for-two-bhikkhus">For two bhikkhus<a id="two-bhikkhus"></a></a></h3>
 <p>Preliminary duties, but no <em>ñatti</em>, then each bhikkhu in order of Rains:</p>
 <blockquote>
-<p>‘Ahaṃ bhante āyasmantaṃ pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā, vadatu
-maṃ āyasmā anukampaṃ upādāya. Passanto paṭikkarissāmi.</p>
-<p>Dutiyam-pi bhante āyasmantaṃ pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā,
-vadatu maṃ āyasmā anukampaṃ upādāya. Passanto paṭikkarissāmi.</p>
-<p>Tatiyam-pi bhante āyasmantaṃ pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā,
-vadatu maṃ āyasmā anukampaṃ upādāya. Passanto paṭikkarissāmi.’</p>
+<p>‘Ahaṁ bhante āyasmantaṁ pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā, vadatu
+maṁ āyasmā anukampaṁ upādāya. Passanto paṭikkarissāmi.</p>
+<p>Dutiyam-pi bhante āyasmantaṁ pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā,
+vadatu maṁ āyasmā anukampaṁ upādāya. Passanto paṭikkarissāmi.</p>
+<p>Tatiyam-pi bhante āyasmantaṁ pavāremi. Diṭṭhena vā sutena vā parisaṅkāya vā,
+vadatu maṁ āyasmā anukampaṁ upādāya. Passanto paṭikkarissāmi.’</p>
 </blockquote>
 <p>For the senior bhikkhu: ‘bhante’ → ‘āvuso’ <em>Vin.I.163</em></p>
 <h3 id="for-one-bhikkhu"><a class="header" href="#for-one-bhikkhu">For one bhikkhu<a id="one-bhikkhu"></a></a></h3>
@@ -385,7 +387,7 @@ vadatu maṃ āyasmā anukampaṃ upādāya. Passanto paṭikkarissāmi.’</p>
 ‘Ajja me pavāraṇā.’<br />
 ‘<em>Today is my pavāraṇā.</em>’ <em>Vin.I.163</em></p>
 <h3 id="pavāraṇā-by-a-sick-bhikkhu"><a class="header" href="#pavāraṇā-by-a-sick-bhikkhu">Pavāraṇā by a sick bhikkhu<a id="sick-bhikkhu"></a></a></h3>
-<p>‘Pavāraṇaṃ dammi, pavāraṇaṃ me hara,<br />
+<p>‘Pavāraṇaṁ dammi, pavāraṇaṁ me hara,<br />
 mam’atthāya pavārehi.’</p>
 <p>‘<em>I give my invitation. May you convey invitation for me. May you invite on my behalf.</em>’</p>
 <p><em>Vin.I.161</em></p>
@@ -395,8 +397,8 @@ mam’atthāya pavārehi.’</p>
 <p>The <em>pavāraṇā</em> of the sick bhikkhu (e.g. ‘Uttaro’) is conveyed in his place
 in the order of Rains:</p>
 <blockquote>
-<p>‘Āyasmā bhante ‘uttaro’ gilāno saṅghaṃ pavāreti. Diṭṭhena vā sutena vā
-parisaṅkāya vā, vadantu taṃ āyasmanto anukampaṃ upādāya.<br />
+<p>‘Āyasmā bhante ‘uttaro’ gilāno saṅghaṁ pavāreti. Diṭṭhena vā sutena vā
+parisaṅkāya vā, vadantu taṁ āyasmanto anukampaṁ upādāya.<br />
 Passanto paṭikkarissati.</p>
 <p>Dutiyam-pi bhante āyasmā ‘uttaro’ gilāno…<br />
 Passanto paṭikkarissati.</p>
@@ -433,15 +435,15 @@ chanting <em>Spreading the Kaṭhina</em> (see <a href="#spreading-the-kathina">
 <p>In the following, ‘Amaro Bhikkhu’ is the receiving senior bhikkhu.</p>
 </blockquote>
 </div>
-<p>Suṇātu me bhante saṅgho. Idaṃ saṅghassa kaṭhina-dussaṃ uppannaṃ. Yadi saṅghassa
-pattakallaṃ, saṅgho imaṃ kaṭhina-dussaṃ āyasmato <em>Amarassa</em> dadeyya, kaṭhinaṃ
-attharituṃ. Esā ñatti.</p>
-<p>Suṇātu me bhante saṅgho. Idaṃ saṅghassa kaṭhina-dussaṃ uppannaṃ. Saṅgho imaṃ
-kaṭhina-dussaṃ āyasmato <em>Amarassa</em> deti, kaṭhinaṃ attharituṃ. Yass’āyasmato
-khamati, imassa kaṭhina-dussassa āyasmato <em>Amarassa</em> dānaṃ, kaṭhinaṃ attharituṃ,
+<p>Suṇātu me bhante saṅgho. Idaṁ saṅghassa kaṭhina-dussaṁ uppannaṁ. Yadi saṅghassa
+pattakallaṁ, saṅgho imaṁ kaṭhina-dussaṁ āyasmato <em>Amarassa</em> dadeyya, kaṭhinaṁ
+attharituṁ. Esā ñatti.</p>
+<p>Suṇātu me bhante saṅgho. Idaṁ saṅghassa kaṭhina-dussaṁ uppannaṁ. Saṅgho imaṁ
+kaṭhina-dussaṁ āyasmato <em>Amarassa</em> deti, kaṭhinaṁ attharituṁ. Yass’āyasmato
+khamati, imassa kaṭhina-dussassa āyasmato <em>Amarassa</em> dānaṁ, kaṭhinaṁ attharituṁ,
 so tuṇh’assa. Yassa nakkhamati, so bhāseyya.</p>
-<p>Dinnaṃ idaṃ saṅghena kaṭhina-dussaṃ āyasmato <em>Amarassa</em>, kaṭhinaṃ attharituṃ.
-Khamati saṅghassa, tasmā tuṇhī. Evam-etaṃ dhārayāmi.</p>
+<p>Dinnaṁ idaṁ saṅghena kaṭhina-dussaṁ āyasmato <em>Amarassa</em>, kaṭhinaṁ attharituṁ.
+Khamati saṅghassa, tasmā tuṇhī. Evam-etaṁ dhārayāmi.</p>
 <p><em>Mv.VII.1.4</em></p>
 <div class="english">
 <blockquote>
@@ -463,19 +465,19 @@ do I hold it.</p>
 the new robe should be marked and <a href="requisites.html#determine-robe">determined</a>.
 Then the recipient chants <em>one</em> of the following:</p>
 <p>‘Namo…’ (×3)<br />
-(a) ‘Imāya saṅghāṭiyā kaṭhinaṃ attharāmi.’<br />
-(b) ‘Iminā uttarāsaṅgena kaṭhinaṃ attharāmi.’<br />
-(c) ‘Iminā antaravāsakena kaṭhinaṃ attharāmi.’</p>
+(a) ‘Imāya saṅghāṭiyā kaṭhinaṁ attharāmi.’<br />
+(b) ‘Iminā uttarāsaṅgena kaṭhinaṁ attharāmi.’<br />
+(c) ‘Iminā antaravāsakena kaṭhinaṁ attharāmi.’</p>
 <p>‘<em>By means of this outer robe / upper robe / lower robe I spread the Kaṭhina.</em>’</p>
 <p><em>Sp.V.1109; Pv.XIV.4</em></p>
 <h3 id="kaṭhina-anumodanā"><a class="header" href="#kaṭhina-anumodanā">Kaṭhina Anumodanā<a id="kathina-anumodana"></a></a></h3>
 <p>The recipient of the Kaṭhina:</p>
-<p>‘Atthataṃ bhante saṅghassa kaṭhinaṃ, dhammiko kaṭhinatthāro, anumodatha.’ (×3)</p>
+<p>‘Atthataṁ bhante saṅghassa kaṭhinaṁ, dhammiko kaṭhinatthāro, anumodatha.’ (×3)</p>
 <p>‘<em>Ven. sirs, the spreading of the Kaṭhina is in accordance with the Dhamma. Please approve of it.</em>’</p>
 <p>If the recipient is senior to all the other bhikkhus:<br />
 ‘bhante’ → ‘āvuso’</p>
 <p>The rest of the Sangha, chanting together:</p>
-<p>‘Atthataṃ bhante saṅghassa kaṭhinaṃ, dhammiko kaṭhinatthāro, anumodāma.’ (×3)</p>
+<p>‘Atthataṁ bhante saṅghassa kaṭhinaṁ, dhammiko kaṭhinatthāro, anumodāma.’ (×3)</p>
 <p>‘<em>Ven. sirs, the spreading of the Kaṭhina is in accordance with the Dhamma. We approve of it.</em>’</p>
 <p><em>Sp.V.1109; Pv.XIV.4</em></p>
 <p>Bhikkhus senior to the recipient omit ‘<em>bhante</em>’.</p>
