--- a/vinaya/uposatha.html
+++ b/vinaya/uposatha.html
@@ -91,7 +91,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="chapter-item expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="chapter-item expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="chapter-item expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="chapter-item expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="chapter-item expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="chapter-item expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="chapter-item expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="chapter-item expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="chapter-item expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="chapter-item expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="chapter-item expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="chapter-item expanded "><a href="../vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="chapter-item expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="chapter-item expanded "><a href="../vinaya/uposatha.html" class="active"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="chapter-item expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="chapter-item expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="chapter-item expanded "><a href="../vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="chapter-item expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="chapter-item expanded "><a href="../quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li><li class="chapter-item expanded "><a href="../namo-tassa.html"><strong aria-hidden="true">3.3.</strong> Namo Tassa</a></li></ol></li><li class="chapter-item expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="chapter-item expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -195,15 +197,15 @@
 <h2 id="pārisuddhi-uposatha-purity-uposatha"><a class="header" href="#pārisuddhi-uposatha-purity-uposatha">Pārisuddhi-uposatha (Purity Uposatha)<a id="parisuddhi"></a></a></h2>
 <h3 id="pārisuddhi-before-sangha"><a class="header" href="#pārisuddhi-before-sangha">Pārisuddhi Before Sangha<a id="before-sangha"></a></a></h3>
 <p>Declaring one’s purity before the Sangha:</p>
-<p>‘Parisuddho ahaṃ bhante, parisuddho’ti maṃ saṅgho dhāretu.’</p>
+<p>‘Parisuddho ahaṁ bhante, parisuddho’ti maṁ saṅgho dhāretu.’</p>
 <p>‘<em>I, ven. sirs, am quite pure (of offences). May the Saṅgha hold me to be pure.</em>’</p>
 <p><em>Vin.I.120-129</em></p>
 <h3 id="pārisuddhi-for-three-bhikkhus"><a class="header" href="#pārisuddhi-for-three-bhikkhus">Pārisuddhi for Three Bhikkhus<a id="three-bhikkhus"></a></a></h3>
 <p>The Pātimokkha requires at least four bhikkhus. If there are only three
 bhikkhus then, after the preliminary duties and the general confession,
 one bhikkhu chants the <em>ñatti</em>:</p>
-<p>‘Suṇantu me bhante āyasmantā ajj’uposatho paṇṇaraso, yad’āyasmantānaṃ
-pattakallaṃ, mayaṃ aññamaññaṃ pārisuddhi uposathaṃ kareyyāma.’</p>
+<p>‘Suṇantu me bhante āyasmantā ajj’uposatho paṇṇaraso, yad’āyasmantānaṁ
+pattakallaṁ, mayaṁ aññamaññaṁ pārisuddhi uposathaṁ kareyyāma.’</p>
 <p>‘<em>Let the ven. ones listen to me. Today is an Observance day, which is a
 fifteenth (day of the fortnight). If it seems right to the ven. ones let us
 carry out the Observance with one another by way of entire purity.</em>’</p>
@@ -212,14 +214,14 @@ carry out the Observance with one another by way of entire purity.</em>’</p>
 <p>If the announcing bhikkhu is the most senior:<br />
 ‘bhante’ → ‘āvuso’</p>
 <p>Then, starting with the senior bhikkhu:</p>
-<p>‘Parisuddho ahaṃ āvuso,<br />
-parisuddho’ti maṃ dhāretha.’ (×3)</p>
+<p>‘Parisuddho ahaṁ āvuso,<br />
+parisuddho’ti maṁ dhāretha.’ (×3)</p>
 <p>‘<em>I, friends, am quite pure. Understand that I am quite pure.</em>’</p>
 <p>For each of the two junior bhikkhus:<br />
 ‘āvuso’ → ‘bhante’</p>
 <h3 id="pārisuddhi-for-two-bhikkhus"><a class="header" href="#pārisuddhi-for-two-bhikkhus">Pārisuddhi for Two Bhikkhus<a id="two-bhikkhus"></a></a></h3>
 <p>Omit the <em>ñatti</em>. The senior bhikkhu declares purity first:</p>
-<p>‘Parisuddho ahaṃ āvuso, parisuddho’ti maṃ dhārehi.’ (×3)</p>
+<p>‘Parisuddho ahaṁ āvuso, parisuddho’ti maṁ dhārehi.’ (×3)</p>
 <p>For the junior:<br />
 ‘āvuso’ → ‘bhante’<br />
 ‘dhārehi’ → ‘dhāretha’</p>
@@ -231,7 +233,7 @@ duties, he then determines:</p>
 <h2 id="sick-bhikkhus"><a class="header" href="#sick-bhikkhus">Sick Bhikkhus<a id="sick"></a></a></h2>
 <h3 id="pārisuddhi"><a class="header" href="#pārisuddhi">Pārisuddhi<a id="sick-parisuddhi"></a></a></h3>
 <p><strong>(a)</strong> The sick bhikkhu makes general confession, then:</p>
-<p>‘Pārisuddhiṃ dammi, pārisuddhiṃ me hara, pārisuddhiṃ me ārocehi.’</p>
+<p>‘Pārisuddhiṁ dammi, pārisuddhiṁ me hara, pārisuddhiṁ me ārocehi.’</p>
 <p>‘<em>I give my purity. Please convey purity for me (and) declare purity for me.</em>’</p>
 <p>If the sick bhikkhu is the junior:<br />
 ‘hara’ → ‘haratha’<br />
@@ -239,21 +241,21 @@ duties, he then determines:</p>
 <p><strong>(b)</strong> The sick bhikkhu’s (e.g. Uttaro’s) purity is conveyed after the
 Pātimokkha:</p>
 <p>’Āyasmā bhante ‘uttaro’ bhikkhu gilāno, parisuddho’ti paṭijāni, parisuddho’ti
-taṃ saṅgho dhāretu.’</p>
+taṁ saṅgho dhāretu.’</p>
 <p>’<em>Ven. sirs, ‘Uttaro Bhikkhu’ who is sick acknowedges that he is pure. May the
 Saṅgha hold him to be pure.</em>’</p>
 <p>If the bhikkhu conveying purity is senior to the sick bhikkhu:</p>
 <p>‘Āyasmā bhante <em>uttaro</em>’ → ‘<em>Uttaro</em> bhante bhikkhu’</p>
 <h3 id="sending-consent-chanda"><a class="header" href="#sending-consent-chanda">Sending Consent (Chanda)<a id="chanda"></a></a></h3>
 <p><strong>(a)</strong> The sick bhikkhu sends his consent to the <em>saṅghakamma</em>:</p>
-<p>‘Chandaṃ dammi, chandaṃ me hara, chandaṃ me ārocehi.’</p>
+<p>‘Chandaṁ dammi, chandaṁ me hara, chandaṁ me ārocehi.’</p>
 <p>‘<em>I offer my consent. May you convey my consent (to the Saṅgha). May you declare
 my consent to them.</em>’</p>
 <p>If the sick bhikkhu is the junior:<br />
 ‘hara’ → ‘haratha’<br />
 ‘ārocehi’ → ‘ārocetha’</p>
 <p><strong>(b)</strong> Informing the Sangha of the sick bhikkhu’s consent:</p>
-<p>’Āyasmā bhante ‘uttaro’ mayhaṃ chandaṃ adāsi, tassa chando mayā āhaṭo, sādhu
+<p>’Āyasmā bhante ‘uttaro’ mayhaṁ chandaṁ adāsi, tassa chando mayā āhaṭo, sādhu
 bhante saṅgho dhāretu.’</p>
 <p>’<em>Ven. sirs, ‘Uttaro Bhikkhu’ has given his consent to me. I have conveyed his
 consent. It is well, ven. sirs, if the Saṅgha holds it to be so.</em>’</p>
@@ -261,7 +263,7 @@ consent. It is well, ven. sirs, if the Saṅgha holds it to be so.</em>’</p>
 <p>‘Āyasmā bhante <em>uttaro</em>’ → ‘<em>Uttaro</em> bhante bhikkhu’</p>
 <h3 id="pārisuddhi-and-chanda"><a class="header" href="#pārisuddhi-and-chanda">Pārisuddhi and Chanda<a id="parisuddhi-chandha"></a></a></h3>
 <p>When both purity and consent are conveyed to the Sangha:</p>
-<p>‘<em>Uttaro</em> bhante bhikkhu gilāno mayhaṃ chandañca pārisuddhiñca adāsi,
+<p>‘<em>Uttaro</em> bhante bhikkhu gilāno mayhaṁ chandañca pārisuddhiñca adāsi,
 tassa chando ca pārisuddhi ca mayā āhaṭā, sādhu bhante saṅgho dhāretu.’</p>
 <p>’<em>Ven. sirs, ‘Uttaro Bhikkhu’ is sick. He has given his consent and
 purity to me. I have conveyed his consent and purity. It is well, ven.
@@ -279,7 +281,7 @@ recitation, or if the situation demands it, there is allowance to
 abbreviate directly after the Nidāna for a shorter recitation.</p>
 <p>If the abbreviation is after the Pārājika rules, the chanter concludes
 with:</p>
-<p>’Uddiṭṭhaṃ kho āyasmanto nidānam.<br />
+<p>’Uddiṭṭhaṁ kho āyasmanto nidānam.<br />
 Uddiṭṭhā cattāro pārājikā dhammā.<br />
 Sutā terasa saṅghādisesā dhammā.<br />
 Sutā dve aniyatā dhammā.<br />
@@ -288,10 +290,10 @@ Sutā dve-navuti pācittiyā dhammā.<br />
 Sutā cattāro pāṭidesanīyā dhammā.<br />
 Sutā sekhiyā dhammā.<br />
 Sutā sattādhikaraṇa-samathā dhammā.</p>
-<p>Ettakantassa bhagavato suttāgataṃ sutta-pariyāpannaṃ anvaḍḍha-māsaṃ
-uddesaṃ āgacchati. Tattha sabbeh’eva samaggehi sammoda-mānehi
+<p>Ettakantassa bhagavato suttāgataṁ sutta-pariyāpannaṁ anvaḍḍha-māsaṁ
+uddesaṁ āgacchati. Tattha sabbeh’eva samaggehi sammoda-mānehi
 avivada-mānehi sikkhitabban’ti.</p>
-<p>Bhikkhu-pāṭimokkhaṃ niṭṭhitaṃ.’</p>
+<p>Bhikkhu-pāṭimokkhaṁ niṭṭhitaṁ.’</p>
 <p><em>Vinaya Mukha Vol 2., p.107</em></p>
 
                     </main>
